翻译术语表至I

--- a/我再也不会把孩子送去学校/6.Learn drive and reward.md
+++ b/我再也不会把孩子送去学校/6.Learn drive and reward.md
@@ -40,17 +40,17 @@
 
 ## 6.4 大脑中的熵检测器
 
-大脑无法有效检测撞击视网膜或耳膜的信号的熵。就像显示器上的像素一样，视网膜细胞也不知道它们传达了什么。如果检测器，如海马体，要根据熵而响应，它必须对来自内嗅皮层的输入(即海马体本身的输入)进行操作。这些输入将在高度处理后显示信号。它可能会呈现一个概念，而不是像素。感觉输入端的高熵信号将在神经选择、完善和[推广](https://supermemo.guru/wiki/Generalization)过程的早期失去大部分噪声成分。信噪比将决定丢失多少信息。噪音越大，损失越大。我们越聪明，这个处理过程就越有选择性，在那个阶段会丢失越多信息。这很好。我们对细节视而不见。模式识别就像一个确定性函数，根据定义，它会导致熵的下降。复杂的模式可能会变成简单的概念。这些概念将为检测器提供实际输入，例如海马体。
+大脑无法有效检测撞击视网膜或耳膜的信号的熵。就像显示器上的像素一样，视网膜细胞也不知道它们传达了什么。如果检测器，如海马体，要根据熵而响应，它必须对来自内嗅皮层的输入(即海马体本身的输入)进行操作。这些输入将在高度处理后显示信号。它可能会呈现一个概念，而不是像素。感觉输入端的高熵信号将在神经选择、完善和[一般化](https://supermemo.guru/wiki/Generalization)过程的早期失去大部分噪声成分。信噪比将决定丢失多少信息。噪音越大，损失越大。我们越聪明，这个处理过程就越有选择性，在那个阶段会丢失越多信息。这很好。我们对细节视而不见。模式识别就像一个确定性函数，根据定义，它会导致熵的下降。复杂的模式可能会变成简单的概念。这些概念将为检测器提供实际输入，例如海马体。
 
 请注意，实验中产生的视觉流证明[海马体对信号熵的反应](https://www.ncbi.nlm.nih.gov/pubmed/15896570)具有高度[象征性](https://supermemo.guru/wiki/Abstract_knowledge)。因此，视觉流在处理过程中丢失的信息会少得多。这一高度简化和[概念化](https://supermemo.guru/wiki/Generalization)的信息将会被扫描为意外，并为整个[学习内驱力](https://supermemo.guru/wiki/Learn_drive)系统提供指引。这就是为什么在这种情况下，海马体似乎对输入熵有反应。
 
-上面的推理解释了为什么低熵和高熵的感觉信号都是无趣的。经过一定程度的处理后，高熵信号可能会失去所有噪声，并向海马体传递低熵输入。然后，我们观察感官输入时“最优熵”水平的错觉。我们需要一个新的概念，**学习熵**，来帮助我们准确地判断信号的吸引力。学习熵需要考虑信息的高度处理，然后才能激活大脑中的奖励中心。本文稍后将讨论[学习熵](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#learn entropy)。
+上面的推理解释了为什么低熵和高熵的感觉信号都是无趣的。经过一定程度的处理后，高熵信号可能会失去所有噪声，并向海马体传递低熵输入。然后，我们观察感官输入时“最佳熵”水平的错觉。我们需要一个新的概念，**学习熵**，来帮助我们准确地判断信号的吸引力。学习熵需要考虑信息的高度处理，然后才能激活大脑中的奖励中心。本文稍后将讨论[学习熵](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#learn entropy)。
 
 ## 6.5 信息处理速度
 
 感受信息扫描中一个被低估的因素是大脑中信息处理的速度。
 
-对于每一首音乐，都有一个可以接受的播放速度范围，在其范围内我们可以欣赏音乐之美。高速播放可能会很烦人，而且音乐可能变得难以解码，因为高速超出了我们的处理能力。同一首音乐如果放慢了速度，很快就会失去吸引力。演讲或课堂讲授也是如此。对于相同的信息和相同的熵水平，我们可以实现完全不同的信号吸引力水平。总是有一个最优的传授速度，该速度取决于影响[学习内驱力](https://supermemo.guru/wiki/Learn_drive)的所有其他因素，包括预备知识。因此，传授速度是高度个性化的。
+对于每一首音乐，都有一个可以接受的播放速度范围，在其范围内我们可以欣赏音乐之美。高速播放可能会很烦人，而且音乐可能变得难以解码，因为高速超出了我们的处理能力。同一首音乐如果放慢了速度，很快就会失去吸引力。演讲或课堂讲授也是如此。对于相同的信息和相同的熵水平，我们可以实现完全不同的信号吸引力水平。总是有一个最佳的传授速度，该速度取决于影响[学习内驱力](https://supermemo.guru/wiki/Learn_drive)的所有其他因素，包括预备知识。因此，传授速度是高度个性化的。
 
 我喜欢以1.4倍的速度听讲座。我用1.3倍来听更有挑战性的片段。虽然我从来没有加快 [Fareed Zakaria](https://en.wikipedia.org/wiki/Fareed_Zakaria_GPS) 的速度，但是我享受这个节目中的每一条信息。课堂上的学生没有加速或减速按钮。即使是暂停按钮，如果有的话，也很难去点击，因为它可能会惹恼其他学生。
 
@@ -62,13 +62,13 @@
 
 如果你碰巧收听了广播新闻，并且听到“珍妮特·杰克逊生了一个孩子”，你的兴趣程度将取决于事件发生的概率。如果你不知道珍妮特·杰克逊是谁，这是一个高概率事件。如果[每天约有35万名女性分娩](http://www.theworldcounts.com/stories/How-Many-Babies-Are-Born-Each-Day)，这已经不是新闻，也不是新鲜事或有趣的事。一名士兵在战争中的第一次死亡将成为新闻，但是当死亡人数增加到成千上万时，年轻的生命将只是一个统计数字。
 
-如果你碰巧认识珍妮特·杰克逊或者喜欢她的音乐，那么生孩子的概率会急剧下降到“*一生一次*”的水平(对珍妮特来说)。这会让你变得有兴趣。然而，如果你记得珍妮特是古代情景喜剧中的一个漂亮女孩，她生孩子可能会被归为“*不可能！*”。如果你意识到珍妮特 50 岁了，并且你知道更年期，你可能会立刻对她的情况产生病态的好奇。你预备知识决定了你对信息的反应。信道没有最优熵水平。只有最适合特定大脑的熵水平。在这一点上，你可能会看到，我们需要引入一个新的衍生概念，我们在[之后](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#learn entropy)将称之为**学习熵**。学习熵将决定一个特定的通道对一个特定的大脑的吸引力。
+如果你碰巧认识珍妮特·杰克逊或者喜欢她的音乐，那么生孩子的概率会急剧下降到“*一生一次*”的水平(对珍妮特来说)。这会让你变得有兴趣。然而，如果你记得珍妮特是古代情景喜剧中的一个漂亮女孩，她生孩子可能会被归为“*不可能！*”。如果你意识到珍妮特 50 岁了，并且你知道更年期，你可能会立刻对她的情况产生病态的好奇。你预备知识决定了你对信息的反应。信道没有最佳熵水平。只有最适合特定大脑的熵水平。在这一点上，你可能会看到，我们需要引入一个新的衍生概念，我们在[之后](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#learn entropy)将称之为**学习熵**。学习熵将决定一个特定的通道对一个特定的大脑的吸引力。
 
 如果你喜欢珍妮特式的八卦，那么这个八卦频道会给你带来恰到好处的意外。它将提供学习匹配。如果你缺乏相关知识或者你的优先级不同，你就会对它置之不理。你的学习重点也将决定你在特定领域的知识水平，以及你对任何特定渠道及其信息熵的反应。
 
 ## 6.7 可预见性和意外
 
-概率和复杂性不是信息感知的唯一组成部分。我们似乎在寻找可预测性和意外之间的平衡。我喜欢乡土爵士乐。在这种类型的音乐中，低音部通常是高度可预测的，伴着[最优的切分音数量](https://supermemo.guru/wiki/Impact_of_syncopation_on_the_pleasure_of_music)。这使得身体运动与节奏同步变得容易。然而，如果没有意外，乡土爵士乐就不会有意思。在这里，复杂的爵士乐即兴表演会刺激负责检测“意外”的神经系统。此外，经过几十年的学习，我的大脑有一个完整的信号数据库。可能有一个我认识并喜欢的伴唱歌手的声音。我的大脑已经准备好迎接乡土爵士乐了。
+概率和复杂性不是信息感知的唯一组成部分。我们似乎在寻找可预测性和意外之间的平衡。我喜欢乡土爵士乐。在这种类型的音乐中，低音部通常是高度可预测的，伴着[最佳的切分音数量](https://supermemo.guru/wiki/Impact_of_syncopation_on_the_pleasure_of_music)。这使得身体运动与节奏同步变得容易。然而，如果没有意外，乡土爵士乐就不会有意思。在这里，复杂的爵士乐即兴表演会刺激负责检测“意外”的神经系统。此外，经过几十年的学习，我的大脑有一个完整的信号数据库。可能有一个我认识并喜欢的伴唱歌手的声音。我的大脑已经准备好迎接乡土爵士乐了。
 
 我喜欢肯·罗宾逊关于创造力的讲座。在某种程度上，它们是高度可预测的。我完全同意罗宾逊，所以你可以说罗宾逊助长了我的证实性偏见。这很愉快。当人们与我们观点一致时，我们喜欢说“英雄所见略同”。但是，如果罗宾逊继续重复同样陈腔滥调，讲述学校如何扼杀创造力，他将失去吸引力。熵可以解释为平均预期[意外](https://en.wikipedia.org/wiki/Self-information)。罗宾逊的传授带来了很多意外。他可能会以不同的、不同寻常的创造性方式描绘相同的模型。因此，[大脑接收新的信息，产生概括，并确认现有的模型。](https://en.wikipedia.org/wiki/Self-information)从新的语境中得出的概括可以增强[知识的一致性](https://supermemo.guru/wiki/Knowledge_coherence)。在基于已知模型的消息中，这是一种非常令人愉快的补充。
 
@@ -125,9 +125,9 @@
 
 信息渠道的可靠性很重要。如果错误率高，[学习内驱力](https://supermemo.guru/wiki/Learn_drive)可能会减弱。当彭齐亚斯和威尔逊在1964年发现宇宙微波背景辐射时，并没有"Wow!" 。困惑的研究人员继续从他们的无线电天线上移除鸽子粪便。解释神秘噪音时，他们优先考虑了鸽子粪的原因。1978年，彭齐亚斯和威尔逊因为他们的发现获得了诺贝尔奖。
 
-当一个科学家有了一个发现，他可能会惊呼“尤里卡！”和手舞足蹈。他大脑中某个地方的神经网络产生了一种[推广](https://supermemo.guru/wiki/Generalization)，结果发出了奖励信号。这进一步传播，让一个老人像孩子一样在实验室里跳跃。
+当一个科学家有了一个发现，他可能会惊呼“尤里卡！”和手舞足蹈。他大脑中某个地方的神经网络产生了一种[一般化](https://supermemo.guru/wiki/Generalization)，结果发出了奖励信号。这进一步传播，让一个老人像孩子一样在实验室里跳跃。
 
-人生早期也是如此。一个在空房间里蹒跚学步的孩子会寻找环境中的低概率成分，比如彩色物体、新玩具等等。当一个蹒跚学步的孩子用勺子从桌子上掉下来做实验时，她就像一个小科学家。然而，当大脑做出“*所有落下的勺子都会发出声音*”的[推广](https://supermemo.guru/wiki/Generalization)时，她也会得到奖励。她可能会以和快乐的科学家完全一样的方式庆祝，与年龄无关。一个大大的微笑是第一个明确的信号。
+人生早期也是如此。一个在空房间里蹒跚学步的孩子会寻找环境中的低概率成分，比如彩色物体、新玩具等等。当一个蹒跚学步的孩子用勺子从桌子上掉下来做实验时，她就像一个小科学家。然而，当大脑做出“*所有落下的勺子都会发出声音*”的[一般化](https://supermemo.guru/wiki/Generalization)时，她也会得到奖励。她可能会以和快乐的科学家完全一样的方式庆祝，与年龄无关。一个大大的微笑是第一个明确的信号。
 
 在由[学习内驱力](https://supermemo.guru/wiki/Learn_drive)控制的各种形式的学习中，同样的快乐在较小程度上也会发生。不管我们是否了解名人或岩石的化学成分。事情很有趣，因为它们通过学习内驱力机制奖励大脑。
 
@@ -139,7 +139,7 @@
 
 大脑处理过的所有知识片段都会立即评估其相关性、[一致性](https://supermemo.guru/wiki/Coherence)和价值。我们立即知道信息是否可以理解和有用。当它[不一致](https://supermemo.guru/wiki/Consistency)、[不连贯](https://supermemo.guru/wiki/Coherence)或不相关时，我们也常常会立即注意到。
 
-不寻常和令人惊讶的知识非常有价值，然而，从大脑的角度来看，概率并非价值的最优反映。有极不可能发生的低重要性事件(例如，小行星撞击遥远的行星系统)，也有很可能的发生改变一个人生活的事件(例如，“*你愿意嫁给我吗*？”)。
+不寻常和令人惊讶的知识非常有价值，然而，从大脑的角度来看，概率并非价值的最佳反映。有极不可能发生的低重要性事件(例如，小行星撞击遥远的行星系统)，也有很可能的发生改变一个人生活的事件(例如，“*你愿意嫁给我吗*？”)。
 
 ### 6.10.2 感性脑和理性脑
 
@@ -183,7 +183,7 @@
 >
 > 我有我自己鲜明的例子来说明评估网络在对抗教育系统方面的力量：
 >
-> 1985年，我算出了发展长期记忆所需的知识复习最优间隔的近似函数。这是就是 [SuperMemo](https://supermemo.guru/wiki/SuperMemo) 的诞生。最初，这个函数是用[笔和纸](http://www.super-memory.com/articles/paper.htm)来实现的。几个月后，我意识到这个系统非常强大。我知道我可以用电脑把它的力量翻倍。然而，我不知道有谁能根据我的函数来编写学习软件。那时候，波兰的所有程序员是要么是在大型机上写 Fortran 或 Cobol 的老家伙，要么是在使用ZX 81、Commodore 64 或 ZX Spectrum 等微型计算机的越来越多的业余爱好者。我决定自己写这个程序。但是我没有编程技能。我是计算机科学的学生，我向老师寻求帮助。然而，我们唯一的编程课程是 Datapoint 汇编语言。这些技能对于玩玩寄存器得出 11 * 11 = 121非常有用。但我想学习一些对 SuperMemo 编程有用的东西。我的学校一直要求我学习计算电路的电阻，或者学习符号积分。我的知识评估网络产生了一个简单的输出:编程技能——&gt; SuperMemo ——&gt;更快的学习(在所有领域，包括电子或微积分)。我决心学习编程。我的学校决心阻止我(通过要求选修其他必修课程)。无奈之下，我报名了经济大学，该大学开设了算法语言课程。这门课程的重点是 [Pascal](https://en.wikipedia.org/wiki/Pascal_(programming_language))。我不得不在做平时的功课的同时，在额外的时间里学习 Pascal。那门课程不错，但我们都在学习理论。纸上谈兵。当时( 1986年)波兰大学里的个人电脑很少，大多数实用的应用都在名为 [Odra](https://en.wikipedia.org/wiki/Odra_(computer)) 的大型机上运行(从 1960 年开始，为在波兰的苏联集团生产)。当我终于得到了我的第一台电脑：[ZX Spectrum](https://en.wikipedia.org/wiki/ZX_Spectrum) ( 1986年1月4日)，我终于可以开始学习编程语言了。在电脑到来之前，我开始写我的第一个程序！在纸上。这是一个组织我一天的计划(类似 [SuperMemo](http://help.supermemo.org/wiki/Plan) 中的计划)。不久之后，我也学会了 Pascal 。首先，我必须减少学校的不良影响，减轻课业负担。我和我的电路老师达成了协议。我会为他做一些高通滤波计算，这将是提高我 Pascal  技能的机会。这个程序花了很多小时来写，简直是浪费时间。这是糟糕学习的完美例子。我几乎不明白我自己的程序是如何工作的。然而，这仍然比仅仅学习图解要好。就编程而言，那段学习很好，我的技能提高了很多。
+> 1985年，我算出了发展长期记忆所需的知识复习最佳间隔的近似函数。这是就是 [SuperMemo](https://supermemo.guru/wiki/SuperMemo) 的诞生。最初，这个函数是用[笔和纸](http://www.super-memory.com/articles/paper.htm)来实现的。几个月后，我意识到这个系统非常强大。我知道我可以用电脑把它的力量翻倍。然而，我不知道有谁能根据我的函数来编写学习软件。那时候，波兰的所有程序员是要么是在大型机上写 Fortran 或 Cobol 的老家伙，要么是在使用ZX 81、Commodore 64 或 ZX Spectrum 等微型计算机的越来越多的业余爱好者。我决定自己写这个程序。但是我没有编程技能。我是计算机科学的学生，我向老师寻求帮助。然而，我们唯一的编程课程是 Datapoint 汇编语言。这些技能对于玩玩寄存器得出 11 * 11 = 121非常有用。但我想学习一些对 SuperMemo 编程有用的东西。我的学校一直要求我学习计算电路的电阻，或者学习符号积分。我的知识评估网络产生了一个简单的输出:编程技能——&gt; SuperMemo ——&gt;更快的学习(在所有领域，包括电子或微积分)。我决心学习编程。我的学校决心阻止我(通过要求选修其他必修课程)。无奈之下，我报名了经济大学，该大学开设了算法语言课程。这门课程的重点是 [Pascal](https://en.wikipedia.org/wiki/Pascal_(programming_language))。我不得不在做平时的功课的同时，在额外的时间里学习 Pascal。那门课程不错，但我们都在学习理论。纸上谈兵。当时( 1986年)波兰大学里的个人电脑很少，大多数实用的应用都在名为 [Odra](https://en.wikipedia.org/wiki/Odra_(computer)) 的大型机上运行(从 1960 年开始，为在波兰的苏联集团生产)。当我终于得到了我的第一台电脑：[ZX Spectrum](https://en.wikipedia.org/wiki/ZX_Spectrum) ( 1986年1月4日)，我终于可以开始学习编程语言了。在电脑到来之前，我开始写我的第一个程序！在纸上。这是一个组织我一天的计划(类似 [SuperMemo](http://help.supermemo.org/wiki/Plan) 中的计划)。不久之后，我也学会了 Pascal 。首先，我必须减少学校的不良影响，减轻课业负担。我和我的电路老师达成了协议。我会为他做一些高通滤波计算，这将是提高我 Pascal  技能的机会。这个程序花了很多小时来写，简直是浪费时间。这是糟糕学习的完美例子。我几乎不明白我自己的程序是如何工作的。然而，这仍然比仅仅学习图解要好。就编程而言，那段学习很好，我的技能提高了很多。
 >
 > 对那些不懂编程的人来说，很难用语言表达出来，但是大学课程和自己编程之间的知识价值差异相当于李子和木星之间的大小差异。当我的同学们在电子学和计量学方面苦于无聊的讲座时，我已经可创业了。我在学校什么也学不到。我可以在 Pascal 的课外课程中学到一点。然而，只有激情和明确目标支持的实用知识才是重要的。到了 1987 年 12 月，我的努力达到了顶峰，写下了第一版 SuperMemo ，这彻底改变了我的人生历程。我的导师 Zbigniew Kierzowski 博士的开明态度让我把我的硕士论文全部奉献给 SuperMemo 这个主题。80 岁生日快乐，Kierzkowski 教授 ！对于一个学生来说，在这个尺度上做出自己的决定，然后再加上论文是用英语写的，这是非常不寻常的。这一事实在今天并不罕见，但它涉及到1989年的一场大规模行政和战术斗争。
 >
@@ -201,7 +201,7 @@
 
 ## 6.11 学习熵
 
-有许多因素会影响大脑对信息和信息渠道的感知和评估。在前面的章节中，我们已经注意到大脑不仅对熵有反应。还有许多因素可以调节单个信息的熵或意外的影响。这些因素包括:编码、传授速度、预处理(例如推广、完善、识别等)。)，预备知识(包括估值、情绪价、渠道可靠性等)，最优水平(受处理速度影响)，等等。 
+有许多因素会影响大脑对信息和信息渠道的感知和评估。在前面的章节中，我们已经注意到大脑不仅对熵有反应。还有许多因素可以调节单个信息的熵或意外的影响。这些因素包括:编码、传授速度、预处理(例如一般化、完善、识别等)。)，预备知识(包括估值、情绪价、渠道可靠性等)，最佳水平(受处理速度影响)，等等。 
 
 这一过程的复杂性要求有一个更好的概念来概括所有这些细微差别。我建议使用学习熵这个术语来描述从特定背景下的个人大脑的角度来看的教育渠道或信号的吸引力。
 
@@ -239,38 +239,40 @@
 
 学习熵将以指数下降和收益递减的方式叠加在每个信息上。通过优化奖励信息的出现时机，我们可以将学习熵提高，使学习成为与食物、性、药物等奖励相同的最令人愉快的活动之一。如果你对此持怀疑态度，请回忆一下那些沉迷于电子游戏的玩家，他们可以在晚上饿着肚子玩游戏。[电子游戏](https://supermemo.guru/wiki/Videogames)可以劫持[学习内驱力](https://supermemo.guru/wiki/Learn_drive)，并将其与赌博的奖励结合起来。赌博的奖励也可能受类似于学习熵的下降和提升规则的支配，然而，它们受制于[可变的奖励](https://supermemo.guru/wiki/Variable_reward)，这可能导致上瘾。重要的是要区分学习的乐趣和有害的上瘾(参见：[对学习的上瘾](https://supermemo.guru/wiki/Addiction_to_learning))。
 
-学习熵将决定[学习内驱力](https://supermemo.guru/wiki/Learn_drive)，但两者将以不同的规则来维持。学习内驱力依赖于知识，因此将受到[间隔重复](https://supermemo.guru/wiki/Spaced_repetition)的影响。由于知识是一个网络，所以说学习内驱力的最优激励可能是没有意义的。为了最大限度地提高学习内驱力，我们应该终身学习，尊重[自然创造力周期](https://supermemo.guru/wiki/Natural_creativity_cycle)，并注意大脑的健康(即一般的健康)。
+学习熵将决定[学习内驱力](https://supermemo.guru/wiki/Learn_drive)，但两者将以不同的规则来维持。学习内驱力依赖于知识，因此将受到[间隔重复](https://supermemo.guru/wiki/Spaced_repetition)的影响。由于知识是一个网络，所以说学习内驱力的最佳激励可能是没有意义的。为了最大限度地提高学习内驱力，我们应该终身学习，尊重[自然创造力周期](https://supermemo.guru/wiki/Natural_creativity_cycle)，并注意大脑的健康(即一般的健康)。
 
-## 6.14 最优信息传授
+## 6.14 最佳信息传授
 
-在学校教育中，我们可以设想一个处于最优[学习熵](https://supermemo.guru/wiki/learn entropy)水平的讲座，在这个讲座中一个学生不断地说“哇!哇!”她保持尽可能快地记笔记。但是，更常见的情况是，讲座会发出一个高熵信息或让人感到无聊。它的学习熵会很低，甚至是负数。
+在学校教育中，我们可以设想一个处于最佳[学习熵](https://supermemo.guru/wiki/learn entropy)水平的讲座，在这个讲座中一个学生不断地说“哇!哇!”她保持尽可能快地记笔记。但是，更常见的情况是，讲座会发出一个高熵信息或让人感到无聊。它的学习熵会很低，甚至是负数。
 如果最佳学习熵水平取决于学生，老师该如何最好地向课堂传授知识？有时候适合所有人的传授是不可能的。换句话说，这困难到需要天才的教学技能。对大多数老师来说，他们的传授使大多数孩子感到无聊或沮丧。
 
 在课堂上，少数幸运儿可能会理解大部分信息。对于一小部分有天赋的人来说，这堂课可能没有带来多少新知识。对他们来说这很无聊。对于其他孩子来说，信息的复杂性超出了他们的理解水平。在这种情况下，如果他们试图理解，老师的讲课可能会令他们挫败。一个关于弦理论的讲课可能相当于一个随机打乱排列的英语单词序列的噪音。讲课是一种浪费时间的活动。诺贝尔奖得主[ Carl Wieman ](https://supermemo.guru/wiki/Carl_Wieman)把它比作[放血](https://supermemo.guru/wiki/Wieman:_Lectures_make_no_sense)。
 
-为了避免负学习熵带来的挫败感，学生们会像你从我[前面](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Prior_knowledge_in_information_seeking)提到的泰国频道换台一样「换台"」。孩子们会忽略来自老师的"静电噪音"，并收听到其他“频道”，这些频道有更合适的学习熵水平（例如桌下的手机上的Facebook）。即使他们的理解能力很好，所传授的知识也可能无法与他们目前的知识互补。如果这些知识不能产生[高质量高价值](https://supermemo.guru/wiki/Knowledge_valuation_network)的推广，就会被认为是显而易见或毫无关联的。
+为了避免负学习熵带来的挫败感，学生们会像你从我[前面](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Prior_knowledge_in_information_seeking)提到的泰国频道换台一样「换台"」。孩子们会忽略来自老师的"静电噪音"，并收听到其他“频道”，这些频道有更合适的学习熵水平（例如桌下的手机上的Facebook）。即使他们的理解能力很好，所传授的知识也可能无法与他们目前的知识互补。如果这些知识不能产生[高质量高价值](https://supermemo.guru/wiki/Knowledge_valuation_network)的一般化，就会被认为是显而易见或毫无关联的。
 
 低学习熵，即使偶尔发生，也会让学生习惯性「换台」。一段时间后，学生们将「进化」一种过滤器，将教师当做一个零熵和零学习熵的无声广播频道。提高讲课质量将是徒劳的。老师在学生心中消失了！
 
- 在教室里，学生往往不能集中注意力在更好的信息上。老师向所有学生传授同样的信息，他们都可能同样感到无聊。相比之下，在谷歌上搜索好关键词，[可以像拼图游戏一样，用符合当前知识树](https://supermemo.guru/wiki/Knowledge_crystallization)的低概率信息连续轰炸大脑。谷歌是一个非常便宜和高效的“哇！”生成器。
+ 在教室里，学生往往不能集中注意力在更好的信息上。老师向所有学生传授同样的信息，他们都可能同样感到无聊。相比之下，在谷歌上搜索好的关键词，[可以像拼图游戏一样，用符合当前知识树](https://supermemo.guru/wiki/Knowledge_crystallization)的低概率信息连续轰炸大脑。谷歌是一个非常便宜和高效的“哇！”生成器。
 
-在[渐进学习](https://supermemo.guru/wiki/Incremental_learning)中，学习熵探测器将选择最佳通道，对这些通道进行优先排序，并利用最佳时机最大限度地提高语义连接和记忆整合。这应该很容易理解为什么**我非常高兴，我永远不会被迫坐在学校的长椅上！**我太爱学习了！
+在[渐进学习](https://supermemo.guru/wiki/Incremental_learning)中，学习熵检测器将选择最佳通道，对这些通道进行优先排序，并利用最佳时机最大限度地提高语义连接和记忆整合。这应该很容易理解为什么**我非常高兴，我永远不会被迫坐在学校的长椅上！**我太爱学习了！
 
-All the above examples illustrate how intricate the interaction between the signal and the brain is in recognizing things worth learning. The reward of learning is the best known indicator of learning quality. When students are happy, we are on the right track. When schools are the place of misery, we are failing on a societal scale.
+所有以上的例子说明了信息和大脑在识别值得学习的东西时的相互作用是多么复杂。学习的奖励是最好的已知的学习质量指标。当学生快乐的时候，我们就走在正确的路上。当学校成为痛苦之地时，我们在社会上就失败了。
 
-**The only reliable detector of knowledge complementarity and coherence are the neural networks of the learn drive system. This is why knowledge cannot be prepackaged and imposed on students.**
+> **唯一可靠的知识互补和一致性检测器是学习内驱力系统的神经网络。这就是为什么知识不能预先包装并强加于学生的原因。**
 
-This is explained using a [crystallization metaphor](https://supermemo.guru/wiki/Knowledge_crystallization). The neural details of the reward system follow in the section: [Learning rewards](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Learning_rewards).
+这是可以用[结晶比喻](https://supermemo.guru/wiki/Knowledge_crystallization)来解释。奖励系统的神经学细节在以下一节中介绍：[学习奖励](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Learning_rewards)。
 
-## 6.15 Gripping lectures
+## 6.15 令人全神贯注的讲课
 
-We love learning, but we usually hate to be taught. Those feelings correlate with creativity, which can probably be explained by the fact that creative elaboration is essential for [pattern completion](https://supermemo.guru/wiki/Pattern_completion) that underlies comprehension.
+我们喜欢学习，但我们通常讨厌别人教导我们。这些感觉与创造力相关，这可能可以用这样一个事实来解释：创造性的阐述对于[模式完成](https://supermemo.guru/wiki/Pattern_completion)是必不可少的，而模式完成正是理解的基础。
 
-In learning, we decide what to investigate. The [learn entropy](https://supermemo.guru/wiki/learn entropy) evaluation strictly depends on the status of the brain and current memory activations. In teaching, knowledge is dished out independent of what we think of it. Many students list boring subjects as their number one reason for disliking school. Not bullying, stress, or early waking. Excruciating boredom! I write about the astronomical difference between self-directed learning and learning at school [here](https://supermemo.guru/wiki/Learning_history:_school_vs._self-directed_learning). It is all about the [learn drive](https://supermemo.guru/wiki/Learn_drive)!
+在学习中，我们决定研究什么。[学习熵](https://supermemo.guru/wiki/learn entrop)的评估严格取决于大脑和当前的记忆激活的状态。在教学中，知识的传授是与我们对它的看法无关。许多学生把枯燥的科目列为他们不喜欢学校的首要原因。不是欺凌，不是压力，也不是早起。而是极度的无聊！我在[这里](https://supermemo.guru/wiki/Learning_history:_school_vs._self-directed_learning)写了关于自我导向学习和在学校学习之间的极大差异。这一切都源于[学习内驱力](https://supermemo.guru/wiki/Learn_drive)！
 
-I am amazed with how many resources are wasted on research that looks for ways to keep kids interested during lectures, while it should be obvious that lectures are just a poor educational tool. Eye contact analysis? Engagement analysis? Efforts to quantify passion? All kids are equipped with natural [learn drive](https://supermemo.guru/wiki/Learn_drive) and our priority should be to ensure we do not destroy that drive. [Force-feeding knowledge](https://supermemo.guru/wiki/Schools_suppress_the_learn_drive) is the prime destroyer of the [learn drive](https://supermemo.guru/wiki/Learn_drive). In addition, there are many socioeconomic factors that prevent a great chunk of kids to thrive even in the best circumstances. Some kids will never show passion for learning. In most cases, it is not their fault. Only a tiny fraction are limited by disabilities, health, and less fortunate genetic endowments. The exponential decay in the [learn drive](https://supermemo.guru/wiki/Learn_drive) with age is caused primarily by compulsory schooling. Passive lecturing is a huge contributor to that process.
+我感到惊讶的是，有这么多的资源浪费在寻找让孩子们在讲课期间保持兴趣的方法的研究上，而讲课显然只是一种糟糕的教育工具。眼神交流分析？参与分析？努力量化激情？所有的孩子都有了天生的[学习内驱力](https://supermemo.guru/wiki/Learn_drive)，我们的首要任务应该是确保我们不会破坏这种内驱力。对[学习内驱力](https://supermemo.guru/wiki/Learn_drive)起主要破坏作用的是[强制灌输知识](https://supermemo.guru/wiki/Schools_suppress_the_learn_drive)。此外，还有许多社会经济因素使许多儿童即使在最好的环境下也不能茁壮成长。有些孩子永远不会表现出对学习的热情。在大多数情况下，这不是他们的错。只有一小部分孩子受到残疾、健康问题和不幸的遗传天赋的限制。[学习内驱力](https://supermemo.guru/wiki/Learn_drive)随年龄增长呈指数衰减的主要原因是义务教育。被动的授课助长了这一过程。
 
 Naturally, there are lectures that work. [Khan Academy](https://supermemo.guru/wiki/Khan_Academy) is jam-packed with good examples. Even a spoken lecture with no slides can work. A TED talk on YouTube can be fun. It can satisfy the [learn drive](https://supermemo.guru/wiki/Learn_drive). [MOOCs](https://en.wikipedia.org/wiki/Massive_open_online_course) are founded on the principle that one rock-star teacher is better than thousands of rank-and-file teachers repeating the same mantra. You can learn a lot even if you are just a passive listener. There are conditions though: you need to be intensely curious about the subject, or you need to love the speaker, or both. **There is only one sure mechanism for ensuring the lecture is interesting: you need to choose it on your own!** This is just one more aspect of the need for self-directed learning.
+
+当然，有些授课是有效的。可汗学院里有很多很好的例子。即使是没有幻灯片的口头演讲也能起作用。YouTube上的TED演讲可能会很有趣。它能满足学习的需要。MOOC是建立在这样一个原则之上的，即一位摇滚明星教师比数千名重复同样咒语的普通教师要好。即使你只是一个被动的倾听者，你也能学到很多东西。但是，也有一些条件：你需要对主题充满好奇，或者你需要喜欢这个演讲者，或者两者兼而有之。只有一个确定的机制可以确保讲座是有趣的：你需要自己选择它！这只是自我导向学习需求的又一个方面。
 
 In addition to choice, in lecturing, you definitely need a pause button in case you need to take a toilet break, or quiet the hunger pangs. Nothing can ruin a lecture as effectively as a bursting bladder. Last but not least, most lectures could benefit from Netflix's Skip Intro feature.
 
