--- a/我再也不会把孩子送去学校/1.前言.md
+++ b/我再也不会把孩子送去学校/1.前言.md
@@ -6,13 +6,13 @@
 
 世界各地的教育系统都遵循着同样的错误设计，需要被废除。本书提供了一个建议，可以在最小的副作用下达到这点。
 
-在梦想着[宏大的教育改革](https://supermemo.guru/wiki/Reform)时，我采取了一种不同寻常的方式:我主要和孩子们交谈，而不是和成年人交谈。我的文字很难理解，但对于一个聪明的孩子来说，它们更容易理解，因为他已经确切地知道我在说什么。
+在梦想着[宏大的教育改革](https://supermemo.guru/wiki/Reform)时，我采取了一种不同寻常的方式：我主要和孩子们交谈，而不是和成年人交谈。我的文字很难理解，但对于一个聪明的，已经确切地知道并感受到我在说什么的孩子来说，它们更容易理解。
 
 我**不**相信我能说服许多家长、教育工作者或权威人士。我主要希望孩子们能从下而上开始革命。孩子们更开放，他们更了解自己的问题。而且, 考虑到亲情, 他们比我更有可能说服自己的父母。参见: [为什么这本书会失败](https://supermemo.guru/wiki/Why_is_it_hard_to_explain_an_effective_education_system%3F)
 
 ## 1.2 废除学校制度
 
-我在学校里待了二十多年，在记忆和学习领域工作了三十年，我的整个人生都在自学。学校与[自主学习](https://supermemo.guru/wiki/Self-directed_learning)之间的反差如此之大，以至于我每天一觉醒来，都不敢相信[古老的普鲁士工厂学校模式](https://en.wikipedia.org/wiki/Prussian_education_system)的存在。这篇文章的主要论点是学校教育已经成为过去。未来将以[自由学习](https://supermemo.guru/wiki/Free_learning)为基础。在人类被人工智能取代之前，还有很大的进步空间。人脑有着惊人的潜力。如今，大部分潜能都被浪费在了学校。不可否认，学校已经把世界变得更好，内燃机也是如此。然而，现在是抛弃旧技术和旧系统的时候了，是时候改变了。
+我在学校里待了二十多年，在记忆和学习领域工作了三十年，我的整个人生都在自学。学校与[自我导向学习](https://supermemo.guru/wiki/Self-directed_learning)之间的反差如此之大，以至于我每天一觉醒来，都不敢相信[古老的普鲁士工厂学校模式](https://en.wikipedia.org/wiki/Prussian_education_system)的存在。这篇文章的主要论点是学校教育已经成为过去。未来将以[自由学习](https://supermemo.guru/wiki/Free_learning)为基础。在人类被人工智能取代之前，还有很大的进步空间。人脑有着惊人的潜力。如今，大部分潜能都被浪费在了学校。不可否认，学校已经把世界变得更好，内燃机也是如此。然而，现在是抛弃旧技术和旧系统的时候了，是时候改变了。
 
 ## 1.3 基于大脑的改革
 
@@ -20,7 +20,7 @@
 
 ## 1.4 对孩子的爱
 
-我的大部分文章都提到了过去和现在几十位伟大的教育家和作家一再强调的古老真理。你会发现[Gray](https://supermemo.guru/wiki/Peter_Gray) [Holt](https://supermemo.guru/wiki/John_Holt), [Greenberg](https://supermemo.guru/wiki/Danny_Greenberg), [Mitra](https://supermemo.guru/wiki/Hole_in_the_wall), [Robinson](https://supermemo.guru/wiki/Ken_Robinson),[Locke](https://en.wikipedia.org/wiki/John_Locke)和其他许多人都有类似的经历(顺序不分先后)。我用一点神经科学知识和我自己对高效学习的研究，进一步充实一些伟人的著作。参见: [我的资历](https://supermemo.guru/wiki/Problem_of_schooling:_My_qualifications)。
+我的大部分文章都提到了过去和现在几十位伟大的教育家和作家一再强调的古老真理。你会发现[Gray](https://supermemo.guru/wiki/Peter_Gray) [Holt](https://supermemo.guru/wiki/John_Holt), [Greenberg](https://supermemo.guru/wiki/Danny_Greenberg), [Mitra](https://supermemo.guru/wiki/Hole_in_the_wall), [Robinson](https://supermemo.guru/wiki/Ken_Robinson),[Locke](https://en.wikipedia.org/wiki/John_Locke)（顺序不分先后）和其他许多人都有类似的经历。我用一点神经科学知识和我自己对高效学习的研究，进一步充实一些伟人的著作。参见：[我的资历](https://supermemo.guru/wiki/Problem_of_schooling:_My_qualifications)。
 
 真正的教育思想巨人有一个共同点:对孩子们深沉而纯粹的爱。许多人在他们作为父母或教师的教育努力中遭遇挫折而开始了他们的旅程。他们的思想都建立在详细的分析和观察的基础上。他们没有分析考试成绩。他们观察和询问孩子们。
 
@@ -32,7 +32,7 @@
 
 ## 1.5 执行概要
 
-这本书太长了。您可以通过[渐进阅读](https://supermemo.guru/wiki/Incremental_reading)来最好地阅读它。如果这还是太多，去[总结](https://supermemo.guru/wiki/Summary)，并遵循链接去阅读你不同意的东西。最终的结论是，上学削弱了年轻一代的大脑潜能。我们可以做得更好。不是20%更好，不是200%更好，而是更多!我在文章中涵盖了一些数字。
+这本书太长了。您可以通过[渐进阅读](https://supermemo.guru/wiki/Incremental_reading)来最好地阅读它。如果这还样是太多，到[总结](https://supermemo.guru/wiki/Summary)这一章，并遵循链接去阅读你不同意的东西。本书最终的结论是，上学削弱了年轻一代的大脑潜能。我们可以做得更好。不是20%更好，不是200%更好，而是更多！我在文章中涵盖了一些数字。
 
 ## 1.6 孩子不是微型的成年人
 
@@ -42,45 +42,45 @@
 解决成年人不能理解孩子大脑问题的关键在于理解[学习内驱力](https://supermemo.guru/wiki/Learn_drive)的力量和[学习基本定律](https://supermemo.guru/wiki/Fundamental_law_of_learning)的重要性。简单来说，它可以用严格的科学术语来说明[快乐是有效学习的必然结果](https://supermemo.guru/wiki/Pleasure_of_learning)。
 
 
-我们需要为孩子提供一个蓬勃发展[学习内驱力](https://supermemo.guru/wiki/Learn_drive)的条件，这是[自主学习](https://supermemo.guru/wiki/Self-directed_learning)的基础。[自由学习](https://supermemo.guru/wiki/Free_learning)是以学习技能为基础的。在学校学习是一个被动的过程。这种被动阻碍了有效学习中使用的关键技能和习惯。自由在决策中是必不可少的，这是发展必要技能的起点。
+我们需要为孩子提供一个蓬勃发展[学习内驱力](https://supermemo.guru/wiki/Learn_drive)的条件，这是[自我导向学习](https://supermemo.guru/wiki/Self-directed_learning)的基础。[自由学习](https://supermemo.guru/wiki/Free_learning)是以学习技能为基础的。在学校学习是一个被动的过程。这种被动阻碍了有效学习中使用的关键技能和习惯。自由在决策中是必不可少的，这是发展必要技能的起点。
 
 ## 1.7 学习基本定律
 
 成年人说孩子们讨厌学校是因为他们不知道学校的好处。他们说:“*孩子们看得不够远。*”因此，大人们认为学习应该以宏大的教育目标的名义进行。这可能是潜存于学校教育概念的第一个错误观念。这是非常危险的，因为目标和知识评估之间存在循环反馈。由于目标估值是基于知识的，因此不能从外部强加。同时，习得是以知识为基础的。因此，所有的学习都是循序渐进的。这意味着，与许多成年人的看法恰恰相反:**孩子是最能评估哪些知识适合他们当前的知识模型的人**。
 
-打个比方，如果我们希望孩子们去珠穆朗玛峰，我们可能会暗示它的存在，但[我们不能以直线方式将孩子推到顶峰](https://supermemo.guru/wiki/Mountain_climb_metaphor)。相反，孩子们需要通过从当前位置寻找最佳选择来逐渐地找到自己的路。我们不能在山上大声发号施令，因为只有孩子才能最清楚地看到哪块石头是威胁，哪条路提供了最好的机会。
+打个比方，如果我们希望孩子们去珠穆朗玛峰，我们可能会暗示它的存在，但[我们不能以直线的方式将孩子推到顶峰](https://supermemo.guru/wiki/Mountain_climb_metaphor)。相反，孩子们需要通过从当前位置寻找最佳选择来逐渐地找到自己的路。我们不能在山上大声发号施令，因为只有孩子才能最清楚地看到哪块石头是威胁，哪条路提供了最好的机会。
 
-新的大脑科学告诉我们大脑中有一个[价值检测器](https://supermemo.guru/wiki/Knowledge_valuation_network)。这个检测器对于高质量的学习至关重要。它接受适合于知识模型的有价值的知识，拒绝其他任何东西。世界各地的学校，没有一个国家例外，在很大程度上忽略了这个检测器!通过纠正这个巨大的全球性错误，我们可以提高学习的价值和知识的质量。由于复利的存在，战略的变化具有难以预测的维度。对人类来说，这是一种巨大的潜力，尚未被利用，随时可能爆发。
+新的大脑科学告诉我们大脑中有一个[价值检测器](https://supermemo.guru/wiki/Knowledge_valuation_network)。这个检测器对于高质量的学习至关重要。它接受适合于知识模型的有价值的知识，拒绝其他任何东西。世界各地的学校，没有一个国家例外，在很大程度上忽略了这个检测器！通过纠正这个巨大的全球性错误，我们可以提高学习的价值和知识的质量。由于复利的存在，战略的变化具有难以预测的维度。对人类来说，这是一种巨大的潜力，尚未被利用，随时可能爆发。
 
 ## 1.8 给我们未来的自己的信息
 
-教育的最大效果，不是伟大的学习，而是使人对进一步学习丧失兴趣的终生影响。学校没有教孩子如何学习，反而使孩子们讨厌学校。然而，学校结束了，一个更糟糕的副作用仍然存在:讨厌学习。幸运的是，人类的大脑天生[渴望学习](https://supermemo.guru/wiki/Learn_drive)，大多数人在十年内就能恢复。恢复后，记忆会掩饰过去，大人将自己的成功归功于教育。这使恶性循环长期存在。成年人不理解孩子。他们甚至不理解自己的大脑，从多年前他们自己还是孩子的时候。记忆无法向未来发送准确的信息。参见:[学校抑制学习内驱力](https://supermemo.guru/wiki/Schools_suppress_the_learn_drive)
+教育的最大效果，不是伟大的学习，而是使人对进一步学习丧失兴趣的终生影响。学校没有教孩子如何学习，反而使孩子们讨厌学校。然而，学校结束了，一个更糟糕的副作用仍然存在：讨厌学习。幸运的是，人类的大脑天生[渴望学习](https://supermemo.guru/wiki/Learn_drive)，大多数人在十年内就能恢复。恢复后，记忆会掩饰过去，大人将自己的成功归功于教育。这使恶性循环长期存在。成年人不理解孩子。他们甚至不理解自己的大脑，从多年前他们自己还是孩子的时候。记忆无法向未来发送准确的信息。参见：[学校抑制学习内驱力](https://supermemo.guru/wiki/Schools_suppress_the_learn_drive)
 
 ## 1.9 早期教育的危险
 
-早期教育尤其危险。[本书](https://supermemo.guru/wiki/Problem_of_Schooling)介绍了[有毒记忆](https://supermemo.guru/wiki/Toxic_memory)的概念，这对于理解学校教育造成的危害是非常重要的。我曾见过在 [SuperMemo](https://supermemo.guru/wiki/SuperMemo) 的影响下，有毒记忆蓬勃发展。我看见它们生长，就像你看见植物或宠物在你家里成长一样。我们越早送孩子上学，受害的可能性就越大。世界上许多国家的政府都渴望降低学龄。他们不知道!
+早期教育尤其危险。[本书](https://supermemo.guru/wiki/Problem_of_Schooling)介绍了[有毒记忆](https://supermemo.guru/wiki/Toxic_memory)的概念，这对于理解学校教育造成的危害是非常重要的。我曾见过在 [SuperMemo](https://supermemo.guru/wiki/SuperMemo) 的影响下，有毒记忆蓬勃发展。我看见它们生长，就像你看见植物或宠物在你家里成长一样。我们越早送孩子上学，受害的可能性就越大。世界上许多国家的政府都渴望降低学龄。他们不知道！
 
 ## 1.10 徒劳的填鸭式
 
-填鸭式学校尤其危险。他们不仅伤害孩子。他们也可能提供令人惊叹的短期回报，让对神经科学了解较少的教育工作者感到眼花缭乱。这就是为什么许多雄心勃勃的教育家对复制韩国或新加坡的成功感到惊讶。在纠正了文化差异之后，我建议他们应该看看学业成就和未来创造性成就之间的关系。例如，在诺贝尔奖人均排名中，“懒惰”的英国排名高于亚洲巨人。一个更有说服力的例子应该来自过去伟大天才的传记:科学家、发明家和发现者。我们需要研究他们的[非学校教育](https://supermemo.guru/wiki/Unschooling)来理解那些导致巨大的创造性大脑成长的原理!在通往天才的道路上几乎没有[填鸭式的学习](https://supermemo.guru/wiki/Cramming)。
+填鸭式学校尤其危险。他们不仅伤害孩子。他们也可能提供令人惊叹的短期回报，让对神经科学了解较少的教育工作者感到眼花缭乱。这就是为什么许多雄心勃勃的教育家对复制韩国或新加坡的成功感到惊讶。在纠正了文化差异之后，我建议他们应该看看学业成就和未来创造性成就之间的关系。例如，在诺贝尔奖人均排名中，「懒惰」的英国排名高于亚洲巨人。一个更有说服力的例子应该来自过去伟大天才的传记:科学家、发明家和发现者。我们需要研究他们的[非学校教育](https://supermemo.guru/wiki/Unschooling)来理解那些导致巨大的创造性大脑成长的原理！通往天才的道路上几乎没有[填鸭式的学习](https://supermemo.guru/wiki/Cramming)。
 
 ## 1.11 学习能力丧失
 
-在学校里有限地依靠[自主学习](https://supermemo.guru/wiki/Self-directed_learning)就像缺乏锻炼一样。它把智力变成懒惰的懒汉。许多人由于多年的忽视而讨厌运动。当他们在中年时重新开始锻炼时，在某种程度上，锻炼是如此令人愉悦，以至于人们重新发现它确实会让人上瘾。学习也是如此。
+在学校里有限地依靠[自我导向学习](https://supermemo.guru/wiki/Self-directed_learning)就像缺乏锻炼一样。它把智力变成懒惰的懒汉。许多人由于多年的忽视而讨厌运动。当他们在中年时重新开始锻炼时，在某种程度上，锻炼是如此令人愉悦，以至于人们重新发现它确实会让人上瘾。学习也是如此。
 
-我们有大量的证据:行为的、神经生理学的、文化的、轶事的等等，在年轻时**压抑个人自由**会对以后的生活产生负面影响。对于墨守成规的[朝鲜](https://supermemo.guru/wiki/North_Korea)“和谐”社会来说，或者更具体地说，对于一个贫穷国家的农村社区来说，这可能是件好事，但在一个渴望获得诺贝尔奖的科学成就的高科技社会，这可能是极不受欢迎的。
+我们有大量的证据:行为的、神经生理学的、文化的、轶事的等等，在年轻时**压抑个人自由**会对以后的生活产生负面影响。对于墨守成规的[朝鲜](https://supermemo.guru/wiki/North_Korea)「和谐」社会来说，或者更具体地说，对于一个贫穷国家的农村社区来说，这可能是件好事，但在一个渴望获得诺贝尔奖的科学成就的高科技社会，这可能是极不受欢迎的。
 
-我们可以追踪一个宝贵的知识从它的源头到重大发现，从它与大脑相遇的那一刻到突破性进展的最终回报。知识在大脑中的传播受到各个阶段学校教育的限制。要了解这是如何发生的，请阅读:[为什么学校会失败](https://supermemo.guru/wiki/Why_schools_fail)。
+我们可以追踪一个宝贵的知识从它的源头到重大发现，从它与大脑相遇的那一刻到突破性进展的最终回报。知识在大脑中的传播受到各个阶段学校教育的限制。要了解这是如何发生的，请阅读：[为什么学校会失败](https://supermemo.guru/wiki/Why_schools_fail)。
 
 **学习的自由是培养在获取知识和创造性解决问题方面的高水平技能的关键。**
 
 ## 1.12 宏大的教育改革
 
-一旦我们让自己的孩子[自由学习](https://supermemo.guru/wiki/Free_learning)，我们就需要解放整个教育体系。让所有类型的学校和思想蓬勃发展(参见:[宏大的教育改革](https://supermemo.guru/wiki/Reform))。循序渐进的学校改革进程应该牢记一个重要目标:地球上所有的大脑都应该被解放出来，去追求[自由学习]()。在那之后，除非发生灾难，只有机器时代才能改变人类的方向。
+一旦我们让自己的孩子[自由学习](https://supermemo.guru/wiki/Free_learning)，我们就需要解放整个教育体系。让所有类型的学校和思想蓬勃发展(参见：[宏大的教育改革](https://supermemo.guru/wiki/Reform))。循序渐进的学校改革进程应该牢记一个重要目标：地球上所有的大脑都应该被解放出来，去追求[自由学习]()。在那之后，除非发生灾难，只有机器时代才能改变人类的方向。
 
 ## 1.13 何时学校是一种眷顾
 
-学校可以是一种眷顾。在后埃博拉时代的利比里亚，在里约热内卢贫民窟的一个小村庄，在波兰的一个 10 户人家的村庄，在后塔利班时代的阿富汗，在玛萨雷(Mathare)贫民窟，在贫穷的移民郊区，学校是一种眷顾。它可能是一种摆脱贫困、暴力或虐待的方式。这也许是一条通向光明未来的道路。在我附近，孩子们不上学就吸毒。在 15 公里外的一个村子里，他们的主要娱乐活动是在当地商店前喝啤酒。从这个意义上说，学校是在保护孩子免受不作为、迟钝的社区或病态家庭的有害影响。
+学校可以是一种眷顾。在后埃博拉时代的利比里亚，在里约热内卢贫民窟的一个小村庄，在波兰的一个 10 户人家的村庄，在后塔利班时代的阿富汗，在玛萨雷（Mathare）贫民窟，在贫穷的移民郊区，学校是一种眷顾。它可能是一种摆脱贫困、暴力或虐待的方式。这也许是一条通向光明未来的道路。在我附近，孩子们不上学就吸毒。在 15 公里外的一个村子里，他们的主要娱乐活动是在当地商店前喝啤酒。从这个意义上说，学校是在保护孩子免受不作为、迟钝的社区或病态家庭的有害影响。
 
 然而，学校只有在少数困难的环境中，特别是在学校系统发展的早期阶段，才是一种眷顾。在他们成为眷顾之后，学校变得普及，然后是强制性的。然后他们演变成一种压迫的工具，只在一个方向上优化:更多的压力，以获得更好的成绩。所有这些压迫都是出于无知。
 
@@ -89,11 +89,11 @@
 
 ## 1.14 优化错误
 
-学校教育的进步是用分数和考试成绩来衡量的。[PISA](https://en.wikipedia.org/wiki/Programme_for_International_Student_Assessment)tests是国际竞争的黄金标准。由于评分和考试成绩在很大程度上是基于短期学习来获得短期结果的，所以我们的优化方向是非常有害的。我们优化的是[死记硬背](https://supermemo.guru/wiki/Cramming)，而不是学习。很少有人关注孩子们实际从学校里收获了多少。考试当天完善的历史知识很可能转化为[在学校最后一天残存的历史知识](https://supermemo.guru/wiki/Learning_history:_school_vs._self-directed_learning)。
+学校教育的进步是用分数和考试成绩来衡量的。[PISA](https://en.wikipedia.org/wiki/Programme_for_International_Student_Assessment)tests 是国际竞争的黄金标准。由于评分和考试成绩在很大程度上是基于短期学习来获得短期结果的，所以我们的优化方向是非常有害的。我们优化的是[死记硬背](https://supermemo.guru/wiki/Cramming)，而不是学习。很少有人关注孩子们实际从学校里收获了多少。考试当天完善的历史知识很可能转化为[在学校最后一天残存的历史知识](https://supermemo.guru/wiki/Learning_history:_school_vs._self-directed_learning)。
 
 如果把分数和考试成绩用于优化学习，我们会得出一些荒谬的结论，例如:通宵学习很好，晚上喝咖啡很好，[死记硬背](https://supermemo.guru/wiki/Cramming)比学习更好，[间隔重复](https://supermemo.guru/wiki/Spaced_repetition)无效，以及其他同样荒谬的结论。
 
-为了改善学校教育，我们增加了更多的材料，提高了标准。这将孩子推向短期记忆，更多的[家庭作业](https://supermemo.guru/wiki/Homework)，更少的[睡眠](https://supermemo.guru/wiki/Science_of_sleep)，更少的锻炼，更少的[乐趣](https://supermemo.guru/wiki/Pleasure_of_learning)，更努力抑制[学习内驱力](https://supermemo.guru/wiki/Learn_drive)，更大的[抑郁和行为障碍](https://supermemo.guru/wiki/Learned_helplessness_vs._learn_drive)的风险的方向。我们把自己逼到一个角落里!这是不幸社会的一个角落!
+为了改善学校教育，我们增加了更多的材料，提高了标准。这将孩子推向短期记忆，更多的[家庭作业](https://supermemo.guru/wiki/Homework)，更少的[睡眠](https://supermemo.guru/wiki/Science_of_sleep)，更少的锻炼，更少的[乐趣](https://supermemo.guru/wiki/Pleasure_of_learning)，更努力抑制[学习内驱力](https://supermemo.guru/wiki/Learn_drive)，更大的[抑郁和行为障碍](https://supermemo.guru/wiki/Learned_helplessness_vs._learn_drive)的风险的方向。我们把自己逼到一个角落里!这是不幸社会的一个角落！
 
 给教育增加容量和速度来打败分数就像希望给[快速阅读](https://supermemo.guru/wiki/Speed-reading)增速会带来更好的学习。我们以实际知识为代价提高分数。更糟糕的是，我们在提高分数的同时，也严重削弱了人类的创造力和解决问题的能力。
 
@@ -113,11 +113,11 @@
 
 ## 1.16 知识的消亡
 
-伟人有伟大的理想。然而，伟大的梦想往往不能实现，并与它们的父亲——梦想家一起死去。
+伟人有伟大的理想。然而，伟大的梦想往往不能实现，而是与它们的父亲——梦想家一起死去。
 
 伟大教育的伟大思想被发明出来，又被遗忘，然后被重新发明或重新发现，一遍又一遍。这一现象已经持续了两千多年。
 
-柏拉图、亚里士多德和约翰·洛克已经去世好几个世纪了。[约翰·霍尔特](https://supermemo.guru/wiki/John_Holt)死了。伊万·伊里奇死了。乌里·布朗芬布伦纳死了。雷蒙德•摩尔(Raymond Moore)和罗兰•梅翰(Roland Meighan)也是如此。他们留下了激励新一代教育家的伟大著作。他们的[黄金格言](https://supermemo.guru/wiki/Gray:_What_genius_minds_think_of_schooling%3F)对于网络来说是伟大的模因，但它们对当时短期需求驱动的教育影响甚微。[自由学习](https://supermemo.guru/wiki/Free_learning)的理念遭到多数受老毛病——短视影响的人所崇拜的短期目标的抵制。
+柏拉图、亚里士多德和约翰·洛克已经去世好几个世纪了。[约翰·霍尔特](https://supermemo.guru/wiki/John_Holt)死了。伊万·伊里奇死了。乌里·布朗芬布伦纳死了。雷蒙德•摩尔（Raymond Moore）和罗兰•梅翰（Roland Meighan）也是如此。他们留下了激励新一代教育家的伟大著作。他们的[黄金格言](https://supermemo.guru/wiki/Gray:_What_genius_minds_think_of_schooling%3F)对于网络来说是伟大的模因，但它们对当时短期需求驱动的教育影响甚微。[自由学习](https://supermemo.guru/wiki/Free_learning)的理念遭到多数受老毛病（短视）影响的人所崇拜的短期目标的抵制。
 
 [丹尼·格林伯格](https://supermemo.guru/wiki/Danny_Greenberg)和[约翰·泰勒·盖托](https://supermemo.guru/wiki/John_Taylor_Gatto)都 80 多岁了。[彼得·格雷](https://supermemo.guru/wiki/Peter_Gray) 70 多岁了。[肯·罗宾逊](https://supermemo.guru/wiki/Ken_Robinson)快 70 岁了。即使是领域里新来的孩子，[Sugata Mitra](https://supermemo.guru/wiki/Sugata_Mitra)也已经 60 多岁了。
 
@@ -126,7 +126,7 @@
 尽管所有这些聪明的大脑都离开了或老化了，我们仍然偏爱一种被希特勒或斯大林赞扬和熟练运用的教育形式。我们仍然怀着一种善意的信念接受极权主义的解决办法，即它们[对社会是有益的](https://supermemo.guru/wiki/Ban_on_homeschooling#Fineman)。
 
 
-我的[书](https://supermemo.guru/wiki/Problem_of_Schooling)要[失败](https://supermemo.guru/wiki/Why_is_it_hard_to_explain_an_effective_education_system%3F)了。如果诺贝尔奖得主[米尔顿•弗里德曼](https://en.wikipedia.org/wiki/Milton_Friedman)(Milton Friedman)在[择校方面的选择](https://supermemo.guru/wiki/School_choice)仍被忽视或误解，我突破冷漠或无知之墙的机会有多大?我在社交媒体上看到了一些机会，也看到了世界各地的在家学习者、不上学者、民主学校和[自由学习](https://supermemo.guru/wiki/Free_learning)者集体智慧的力量。我从被奴役的年轻人的叛逆本性中看到了机会。
+我的[书](https://supermemo.guru/wiki/Problem_of_Schooling)要[失败](https://supermemo.guru/wiki/Why_is_it_hard_to_explain_an_effective_education_system%3F)了。如果诺贝尔奖得主[米尔顿•弗里德曼](https://en.wikipedia.org/wiki/Milton_Friedman)（Milton Friedman）在[择校方面的选择](https://supermemo.guru/wiki/School_choice)仍被忽视或误解，我突破冷漠或无知之墙的机会有多大?我在社交媒体上看到了一些机会，也看到了世界各地的在家学习者、不上学者、民主学校和[自由学习](https://supermemo.guru/wiki/Free_learning)者集体智慧的力量。我从被奴役的年轻人的叛逆本性中看到了机会。
 
 ## 1.17 预言：学校教育的消亡
 
@@ -134,4 +134,4 @@
 
 然而，更多的孩子将在家上学，并为法律的改变而斗争，更多的[民主学校](https://supermemo.guru/wiki/Democratic_school)将涌现，更多的蒙特梭利学校和其他基于自由的解决方案将变得流行。旧式的公立学校将统治一切，但自由将通过法律得到扩大。民族主义和国家课程将受到限制。[自由学习](https://supermemo.guru/wiki/Free_learning)的爆炸式增长是指数式的。
 
-我很高兴我还没死。旧的普鲁士学校制度将很快消亡。我打赌我会看到它发生的!
+我很高兴我还没死。旧的普鲁士学校制度将很快消亡。我打赌我会看到它的发生！
