--- a/我再也不会把孩子送去学校/22.Glossary.md
+++ b/我再也不会把孩子送去学校/22.Glossary.md
@@ -1,37 +1,67 @@
-# 22 Glossary
+# 22 术语表
 
-This terminology is used in [my](https://supermemo.guru/wiki/Piotr_Wozniak) articles on [education](https://supermemo.guru/wiki/Problem_of_Schooling), [sleep](https://supermemo.guru/wiki/Science_of_sleep), and [creatvity](https://supermemo.guru/wiki/Natural_creativity_cycle)(some of this terminology is my own):
+这个术语集是[我](https://supermemo.guru/wiki/Piotr_Wozniak)在关于[教育](https://supermemo.guru/wiki/Problem_of_Schooling)、[睡眠](https://supermemo.guru/wiki/Science_of_sleep)和[创造力](https://supermemo.guru/wiki/Natural_creativity_cycle)的文章中使用过的（其中一些术语是我自己定义的）：
 
 - [Abstractness](https://supermemo.guru/wiki/Abstractness) - dissociation from detail that increases [applicability](https://supermemo.guru/wiki/Applicability) of knowledge
+- [抽象性](https://supermemo.guru/wiki/Abstractness)——提高知识[通用性](https://supermemo.guru/wiki/Applicability)的，从细节中的分离
 - [Acquisition rate](https://supermemo.guru/wiki/Acquisition_rate) - speed of learning
+- [习得速率](https://supermemo.guru/wiki/Acquisition_rate)——学习的速度
 - [Active recall](https://supermemo.guru/wiki/Active_recall) - bringing knowledge back up from memory (e.g. as opposed to passive reading)
+- [主动回忆](https://supermemo.guru/wiki/Active_recall)——从记忆中寻找知识（举例，与被动阅读相反）
 - [Applicability](https://supermemo.guru/wiki/Applicability) - range of usability of knowledge
+- [通用性](https://supermemo.guru/wiki/Applicability)——知识可用的范围
 - [Behavioral space](https://supermemo.guru/wiki/Behavioral_space) - set of behaviors that result in no penalty
+- [行为空间](https://supermemo.guru/wiki/Behavioral_space)——不会受到惩罚的一系列行为
 - [Behavioral system](https://supermemo.guru/wiki/Behavioral_system) - set of behaviors that develop in a set social context
+- [行为系统](https://supermemo.guru/wiki/Behavioral_system)——在一定的社会背景下发展起来的一系列行为
 - [Biphasic sleep](https://supermemo.guru/wiki/Biphasic_sleep) - sleep in two blocks: night and siesta
+- [双相睡眠](https://supermemo.guru/wiki/Biphasic_sleep)——分两个时间段的睡眠：夜间睡眠和午睡
 - [Circadian cycle](https://supermemo.guru/wiki/Circadian_cycle) - ~24h cycle of changes in the state of body and mind
+- [昼夜周期](https://supermemo.guru/wiki/Circadian_cycle)——身心状态变化的24小时周期
 - [Circadian phase](https://supermemo.guru/wiki/Circadian_phase) - the time of day measured in hours since natural waking
+- [昼夜阶段](https://supermemo.guru/wiki/Circadian_phase)——一天中自然醒来后，以小时为单位测量的，时间
 - [Circadian sleep propensity](https://supermemo.guru/wiki/Circadian_sleep_propensity) - sleepiness determined by the body clock
+- [昼夜睡眠倾向](https://supermemo.guru/wiki/Circadian_sleep_propensity)——由生物钟决定的睡意
 - [Childhood amnesia](https://supermemo.guru/wiki/Childhood_amnesia) - natural long-term memory deficit in children
+- [童年健忘症](https://supermemo.guru/wiki/Childhood_amnesia)——儿童的自然长期记忆缺陷
 - [Chronic stress](https://supermemo.guru/wiki/Chronic_stress) - harmful stress that does not go away
+- [慢性压力](https://supermemo.guru/wiki/Chronic_stress)——持续的有害压力
 - [Cloze deletion](https://supermemo.guru/wiki/Cloze_deletion) - question in the form of a sentence in which a keyword is replaced with 3 dots
+- [完形填空](https://supermemo.guru/wiki/Cloze_deletion)——以句子的形式出现的问题，其中每个关键词被替换成[...]
 - [Coherence](https://supermemo.guru/wiki/Coherence) - degree of meaningful connectedness of knowledge that makes remembering easy
+- [连贯性](https://supermemo.guru/wiki/Coherence)——使记忆变得容易的有意义的知识关联性的程度
 - [Consistency](https://supermemo.guru/wiki/Consistency) - degree in which knowledge is free of contradictory information
+- [一致性](https://supermemo.guru/wiki/Consistency)——知识没有矛盾信息的程度
 - [Consolidation](https://supermemo.guru/wiki/Memory_consolidation) - increase in [memory stability](https://supermemo.guru/wiki/Memory_stability) as a result of [review](https://supermemo.guru/wiki/Review) or in sleep
+- [巩固](https://supermemo.guru/wiki/Memory_consolidation)——[复习](https://supermemo.guru/wiki/Review)或睡眠导致的[记忆稳定性](https://supermemo.guru/wiki/Memory_stability)增加
 - [Democratic school](https://supermemo.guru/wiki/Democratic_school) - school run by kids with minimum adult supervision
+- [民主学校](https://supermemo.guru/wiki/Democratic_school)——在最少的成人监督下的，由儿童管理的学校
 - [Deschooling](https://supermemo.guru/wiki/Deschooling) - [free education](https://supermemo.guru/wiki/Free_learning) without compulsory schooling
+- [非学校教育](https://supermemo.guru/wiki/Deschooling)——不受义务学校教育压迫的[自由学习](https://supermemo.guru/wiki/Free_learning) 
 - [Factory model of education](https://supermemo.guru/wiki/Factory_model_of_education) - education based on mass production philosophy
+- [工厂教育模式](https://supermemo.guru/wiki/Factory_model_of_education)——基于大规模生产理念的教育
 - [Forgetting curve](https://supermemo.guru/wiki/Forgetting_curve) - curve showing loss of knowledge over time
+- [遗忘曲线](https://supermemo.guru/wiki/Forgetting_curve)——显示知识随时间遗忘的曲线
 - [Free learning](https://supermemo.guru/wiki/Free_learning) - [self-directed learning](https://supermemo.guru/wiki/Self-directed_learning) without constraints and [coercion](https://supermemo.guru/wiki/Coercion)
+- [自由学习](https://supermemo.guru/wiki/Free_learning)——不受限制和[强迫](https://supermemo.guru/wiki/Coercion)的[自主学习](https://supermemo.guru/wiki/Self-directed_learning)
 - [Free running sleep](https://supermemo.guru/wiki/Free_running_sleep) - sleep that is not artificially regulated (e.g. with alarm clocks, medication, etc.)
+- [自由运转睡眠](https://supermemo.guru/wiki/Free_running_sleep)——不受人为调节的睡眠（如闹钟、药物等）
 - [Fundamental law of learning](https://supermemo.guru/wiki/Fundamental_law_of_learning) - law stating that efficient learning is always pleasurable
+- [学习的基本规律](https://supermemo.guru/wiki/Fundamental_law_of_learning)——规律表明有效的学习总是令人愉快的
 - [Generalization](https://supermemo.guru/wiki/Generalization) - process in which details are forgotten for the big picture to emerge
+- [一般化](https://supermemo.guru/wiki/Generalization)——为了让大局浮现而忘记细节的过程。
 - [Homeostatic sleep propensity](https://supermemo.guru/wiki/Homeostatic_sleep_propensity) - fatigue caused by *tiredness of waking*
+- [稳态睡眠倾向](https://supermemo.guru/wiki/Homeostatic_sleep_propensity)——因*醒着的时候的疲劳*而引起的睡意
 - [Homeschooling](https://supermemo.guru/wiki/Homeschooling) - home-based education
+- [家庭教育](https://supermemo.guru/wiki/Homeschooling)——以家庭为基础的教育
 - [Idiocracy problem](https://supermemo.guru/wiki/Idiocracy_problem) - problem of smart people having few or late children
+- 蠢蛋进化论问题——聪明的人少生或晚生孩子的问题
 - [Increading](https://supermemo.guru/wiki/Increading) - reading [incrementally](https://supermemo.guru/wiki/Incremental_reading)
+- [渐进的阅读](https://supermemo.guru/wiki/Increading)——在渐进阅读工具集帮助下的阅读
 - [Incremental learning](https://supermemo.guru/wiki/Incremental_learning) - method for mastering knowledge from the web (fast and durable)
+- [渐进学习](https://supermemo.guru/wiki/Incremental_learning)——从网络上掌握知识的方法（快速且持久）
 - [Incremental reading](https://supermemo.guru/wiki/Incremental_reading) - method of converting books and articles into durable knowledge in student's mind
+- [渐进阅读](https://supermemo.guru/wiki/Incremental_reading)——将书籍和文章转化为学生头脑中持久的知识的方法
 - [Incremental video](https://supermemo.guru/wiki/Incremental_video) - method of massive learning and review of lectures (e.g. from YouTube)
 - [Interference](https://supermemo.guru/wiki/Interference) - forgetting induced by new learning
 - [Learn drive](https://supermemo.guru/wiki/Learn_drive) - natural curiosity that drives learning
