--- a/我再也不会把孩子送去学校/3.脑科学.md
+++ b/我再也不会把孩子送去学校/3.脑科学.md
@@ -1,5 +1,5 @@
 # 3 脑科学
 
-反对学习教育最有力的论据来自神经科学。塑造教育的最基本的力量之一是**学习内驱力**。理解学习内驱力至关重要，这有助于我们领悟到[自主学习](https://supermemo.guru/wiki/Self-directed_learning)、[自我控制](https://supermemo.guru/wiki/Self-paced_learning)、[自我学习](https://supermemo.guru/wiki/Self-learning)是培养知识渊博的、富有创造力的思维最有效的方法。学习内驱力中的奖励神经原理引导我公式化了[学习的基本规律](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Fundamental_law_of_learning)。我希望没有孩子会接受任何违反规律的行为。
+反对学习教育最有力的论据来自神经科学。塑造教育的最基本的力量之一是**学习内驱力**。理解学习内驱力至关重要，这有助于我们领悟到[自我导向学习](https://supermemo.guru/wiki/Self-directed_learning)、[自我调节学习](https://supermemo.guru/wiki/Self-paced_learning)、[自学](https://supermemo.guru/wiki/Self-learning)是培养知识渊博的、富有创造力的思维最有效的方法。学习内驱力中的奖励神经原理引导我公式化了[学习的基本规律](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Fundamental_law_of_learning)。我希望没有孩子会接受任何违反规律的行为。
 
-除了学习效率低下之外，学校制度所犯的最浪费的罪行之一就是忽视了[自然创造力周期](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Natural_creativity_cycle)。在这个循环中，知识是在醒来和睡眠的[生理周期](https://supermemo.guru/wiki/Circadian_cycle)过程中被获得、被创造性地逐步增强、扩展和优化的。学校系统大多是在19世纪设计的，那时我们还不知道创造力周期的存在。
+除了学习效率低下之外，学校制度所犯的最浪费的罪行之一就是忽视了[自然创造力周期](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Natural_creativity_cycle)。在这个循环中，知识是在醒来和睡眠的[昼夜周期](https://supermemo.guru/wiki/Circadian_cycle)过程中被获得、被创造性地逐步增强、扩展和优化的。学校系统大多是在19世纪设计的，那时我们还不知道创造力周期的存在。
