--- a/我再也不会把孩子送去学校/4.学习内驱力.md
+++ b/我再也不会把孩子送去学校/4.学习内驱力.md
@@ -1,4 +1,4 @@
-# 4 ·学习内驱力(Learn drive)
+# 4 ·学习内驱力（Learn drive）
 
 学习内驱力是大脑用于组织全世界知识的[拼图游戏](https://supermemo.guru/wiki/Jigsaw_puzzle)的神经机制。
 
@@ -12,28 +12,28 @@
 
 我有意避免使用好奇心这个术语，这是心理学经常使用的术语。如果不能准确理解学习内驱力的机制，我反对现行学校制度的整个推理就会站不住脚。当我解释为什么我不想使用其他容易被误解的已有术语时，对简单而精确的术语的需要将变得更加清晰。
 
-好奇心(curiosity)、猎奇(novelty seeking)、无聊易感性(boredom susceptibility)、经验开放性(openness to experience)、认知需求(need of cognition)和智力投入(intellectual engagement)等术语经常被用于不同的上下文中，以暗示学习内驱力的存在。它们要么是误导，要么意味着不同的东西。他们都有一个包袱，可能会使这个概念模糊不清。这包括几十年来在科学、流行用法、不恰当内涵等方面的分歧。
+好奇心（curiosity）、猎奇（novelty seeking）、无聊易感性（boredom susceptibility）、经验开放性（openness to experience）、认知需求（need of cognition）和智力投入（intellectual engagement）等术语经常被用于不同的上下文中，以暗示学习内驱力的存在。它们要么是误导，要么意味着不同的东西。他们都有一个包袱，可能会使这个概念模糊不清。这包括几十年来在科学、流行用法、不恰当内涵等方面的分歧。
 
 描述学习内驱力所需的条件:
 
-- 学习内驱力是与生俱来的(即我们生来就有学习内驱力)
-- 学习内驱力是可以训练的(即可以通过学习来增强)
+- 学习内驱力是与生俱来的（即我们生来就有学习内驱力）
+- 学习内驱力是可以训练的（即可以通过学习来增强）
 - 学习内驱力可以被抑制
 - 学习内驱力不是由压力驱动的
 - 学习内驱力会带来回报
-- 学习内驱力不是一种性格特征(即我们都表现出学习内驱力，至少在儿童时期)
+- 学习内驱力不是一种性格特征（即我们都表现出学习内驱力，至少在儿童时期）
 
 学习内驱力是一种重要的进化适应，[利用信息熵](https://supermemo.guru/wiki/Learntropy)对环境和内部输入进行判断。最重要的是，**学习内驱力是人类大脑非常需要的一种属性。**
 
 在神经网络方面，学习内驱力可以由非常简单的机制运行，这些机制可能产生一系列类似的轨迹，用于探索环境。如果你把一个蹒跚学步的孩子在一个新环境中的轨迹画出来，你可能会发现这很难与蟑螂产生的轨迹图区分。然而，最终的记忆效果却大不相同。
 
-**好奇心**这个术语可以用来代替学习内驱力。它有精确的科学定义，但在通俗使用中也有负面含义。学习内驱力是完全正面的。学习内驱力是使人类登上月球的本能。我们说“**好奇心害死猫**”。波兰有句谚语说“**好奇心是下地狱的第一步**”。我说“**好奇是知识的第一步**”。我们会用“病态的好奇心”这样的词，或者把好奇心和一位老太太伸长脖子从窗户里探出头来听最新的八卦联系起来。好奇心与动机和奖励的联系也玷污了它。孩子们可能会好奇糖果店什么时候开门。这种好奇心可以在没有学习内驱力的情况下产生。学校的成绩会产生“好奇心”，而这种“好奇心”**不会**驱使孩子走向成功。学习内驱力是基于信息的，不太可能导向死胡同。如果*好奇心内驱力*这个词是建立在一个被证实的理论之上，并且被精确地定义为无所不在的(而不是由不确定性产生的)，那么它就可以作为学习内驱力。在这篇文章中，我解释了我们需要珍惜和培养教育中的学习内驱力。我经常听到这样的话:*好奇心可以等待，学习才是最重要的*。*学习内驱力*这个词没有这样的歧义。如果我一直说“*我们需要培养好奇心*”，没有人会认真对待!
+**好奇心**这个术语可以用来代替学习内驱力。它有精确的科学定义，但在通俗使用中也有负面含义。学习内驱力是完全正面的。学习内驱力是使人类登上月球的本能。我们说「**好奇心害死猫**」。波兰有句谚语说「**好奇心是下地狱的第一步**」。我说「**好奇是知识的第一步**」。我们会用“病态的好奇心”这样的词，或者把好奇心和一位老太太伸长脖子从窗户里探出头来听最新的八卦联系起来。好奇心与动机和奖励的联系也玷污了它。孩子们可能会好奇糖果店什么时候开门。这种好奇心可以在没有学习内驱力的情况下产生。学校的成绩会产生“好奇心”，而这种「好奇心」**不会**驱使孩子走向成功。学习内驱力是基于信息的，不太可能导向死胡同。如果*好奇心内驱力*这个词是建立在一个被证实的理论之上，并且被精确地定义为无所不在的（而不是由不确定性产生的），那么它就可以作为学习内驱力。在这篇文章中，我解释了我们需要珍惜和培养教育中的学习内驱力。我经常听到这样的话：*好奇心可以等待，学习才是最优先的*。*学习内驱力*这个词没有这样的歧义。如果我一直说「*我们需要培养好奇心*」，没有人会认真对待!
 
 **无聊易感性**或**无聊不耐受**与学习内驱力非常接近，然而，它强调不耐烦。它是一种排斥力，而学习内驱力是基于对新知识渴求。两者可能基于相同的机制，但是本文需要关注学习内驱力的积极方面。在我的文章中，以学习内驱力代替无聊易感性，你会看到内涵的戏剧性变化。
 
 **经验开放性**是一种性格特质。它也可以被定义为一种控制恐惧的能力，这种恐惧是由学习内驱力引发的探索所产生的。所有人都体会过学习内驱力，但有些人的学习内驱力会被情境的焦虑所抑制。
 
-**求知倾向**是一个罕见的、从未被定义过的术语。一些专家比如[Lilian Katz博士](https://en.wikipedia.org/wiki/Lilian_Katz)有用过这个词。这个词很合适，但是它太长了，而且倾向远不如内驱力准确。内驱力更善于表达现象的本质。此外，knowledge seeking 是信息检索领域经常使用的一个术语。
+**求知倾向**（Disposition to seek knowledge）是一个罕见的、从未被定义过的术语。一些专家比如[Lilian Katz博士](https://en.wikipedia.org/wiki/Lilian_Katz)有用过这个词。这个词很合适，但是它太长了，而且倾向远不如内驱力准确。内驱力更善于表达现象的本质。此外，knowledge seeking 是信息检索领域经常使用的一个术语。
 
 正如名字所暗示的那样，**认知需求**的含义比学习内驱力更宽泛。下棋可以满足一个人的认知需求，但它无疑地不能满足学习内驱力。*认知需求*这个术语与好奇心的一个子概念重叠，后者被称为*智力好奇心*。这两种方法都不能精确地涵盖学习内驱力列出的条件。
 
@@ -41,9 +41,9 @@
 
 ## 4.3 新奇和压力
 
-在实验室里，老鼠会被吓得去寻找新事物。当老鼠嗅到捕食者的气味时，它会加倍努力寻找一种新的方法走出自己的环境。这种行为显示出先天驱动力和诱发驱动力之间可能存在混乱。老鼠的行为取决于对新事物的寻找和对风险的恐惧之间的平衡。换句话说，这是对新事物的探索和对新事物的恐惧之间的平衡。有人可能会错误地用这种老鼠实验来得出结论:孩子们可能会被吓得去学习。事实正好相反。[长期的压力是大脑的主要破坏因素之一]()。它是成长中的主要敌人，也是学习内驱力的主要抑制因素。于是我们就混淆了求新(表现)和求新(本能)。有些过程可以在不改变本能的情况下增强表现。你可能会吓到动物去追求新奇(表现增强)，但从长远来看却抑制了本能(本能抑制)。新事物的吸引和新事物的恐惧将永远存在。在优化教育中，我们需要关注吸引部分，消除恐惧部分。学习内驱力是寻找新事物的吸引力的一部分。
+在实验室里，老鼠会被吓得去寻找新事物。当老鼠嗅到捕食者的气味时，它会加倍努力寻找一种新的方法走出自己的环境。这种行为显示出先天驱动力和诱发驱动力之间可能存在混乱。老鼠的行为取决于对新事物的寻找和对风险的恐惧之间的平衡。换句话说，这是对新事物的探索和对新事物的恐惧之间的平衡。有人可能会错误地用这种老鼠实验来得出结论：孩子们可能会被吓得去学习。事实正好相反。[长期的压力是大脑的主要破坏因素之一](https://supermemo.guru/wiki/Stress_resilience)。它是成长中的主要敌人，也是学习内驱力的主要抑制因素。于是我们就混淆了求新（表现）和求新（本能）。有些过程可以在不改变本能的情况下增强表现。你可能会吓到动物去追求新奇（表现增强），但从长远来看却抑制了本能（本能抑制）。新事物的吸引和新事物的恐惧将永远存在。在优化教育中，我们需要关注吸引部分，消除恐惧部分。学习内驱力是寻找新事物的吸引力的一部分。
 
-焦虑可能会抑制或加强探索。如果一个孩子害怕黑森林，他的探索将取决于他是在森林里(强化探索)，在边缘(抑制探索)，还是远离森林(由学习内驱力驱动的不受抑制的探索)。**在教育中，我们希望最大限度地提高学习内驱力，最大限度地减少焦虑。**
+焦虑可能会抑制或加强探索。如果一个孩子害怕黑森林，他的探索将取决于他是在森林里（强化探索），在边缘（抑制探索），还是远离森林（由学习内驱力驱动的不受抑制的探索）。**在教育中，我们希望最大限度地提高学习内驱力，最大限度地减少焦虑。**
 
 学习内驱力是获得新知识的一种天生本能。所有健康的学生都有学习内驱力。这是一股改变世界的好力量。
 
@@ -55,9 +55,9 @@
 
 ## 4.5 延伸阅读
 
-有关好奇心理论的详细讨论，请参见:
+有关好奇心理论的详细讨论，请参见：
 
-- [好奇心和学习的乐趣:想要和喜欢新信息](https://www.researchgate.net/publication/245823962_Curiosity_and_the_pleasures_of_learning_Wanting_and_liking_new_information)
+- [好奇心和学习的乐趣：想要和喜欢新信息](https://www.researchgate.net/publication/245823962_Curiosity_and_the_pleasures_of_learning_Wanting_and_liking_new_information)
 
 - [好奇心与探索](http://www.csun.edu/~vcpsy00h/students/explore.htm)
 
