--- a/我再也不会把孩子送去学校/5.学校教育对学习内驱力的影响.md
+++ b/我再也不会把孩子送去学校/5.学校教育对学习内驱力的影响.md
@@ -25,15 +25,15 @@
 
 ## 5.3 学习内驱力 与 学习
 
-保持学习热情的主要技巧是不断学习本身。学习使大脑充满新知识。然而，它也识别和扩大了不懂的领域。通过选择合适的学习材料，我们可以不断地寻找新的领域来填补。这是[自主学习](https://supermemo.guru/wiki/Learning_history:_school_vs._self-directed_learning)的最佳方式。只有学习者自己才能有效地识别出知道的领域、不懂的领域以及中间适合学习的领域。
+保持学习热情的主要技巧是不断学习本身。学习使大脑充满新知识。然而，它也识别和扩大了不懂的领域。通过选择合适的学习材料，我们可以不断地寻找新的领域来填补。这是[自我导向学习](https://supermemo.guru/wiki/Learning_history:_school_vs._self-directed_learning)的最佳方式。只有学习者自己才能有效地识别出知道的领域、不懂的领域以及中间适合学习的领域。
 
 在学校的学习通过夺去学习内驱力引导系统的控制，违反了有效学习的原则。在学校被动学习往往会触及已知的知识领域，这将使它变得无聊。它常常会触及不懂的领域，使之难以理解。它很少能准确地触及到那些可以从已有的知识树中扩展出去的新知识。
 
 **学校的被动预编课程学习会抑制学习内驱力。**
 
-打个比方说，老师把一段段知识扔给学生，希望他们能从中学到一些东西。通常情况并非如此。大多数课件材料在一个月内就用完了。一年后，只有重复、复习、重复和考试才能帮助部分知识在大脑中保存下来。基于[学习内驱力](https://supermemo.guru/wiki/Learn_drive)的[自主学习](https://supermemo.guru/wiki/Learning_history:_school_vs._self-directed_learning)在拒绝不合适的知识或找到可以从已有的知识树中扩展出去的新知识方面是非常精确的。
+打个比方说，老师把一段段知识扔给学生，希望他们能从中学到一些东西。通常情况并非如此。大多数课件材料在一个月内就用完了。一年后，只有重复、复习、重复和考试才能帮助部分知识在大脑中保存下来。基于[学习内驱力](https://supermemo.guru/wiki/Learn_drive)的[自我导向学习](https://supermemo.guru/wiki/Learning_history:_school_vs._self-directed_learning)在拒绝不合适的知识或找到可以从已有的知识树中扩展出去的新知识方面是非常精确的。
 
-这是学校教育的最大弊病之一:学生们总是抱怨学校太无聊或太辛苦。学生们不快乐，这与系统背道而驰。如果我们保持旧的课堂学习制度，这个问题就不能被有效地解决。在一个总是因为不同的激情、不同的兴趣、不同的天赋、不同的学习速度而导致知识差异的群体中，优化学习是不可能的。唯一有效的优化解决方案是[自主学习](https://supermemo.guru/wiki/Learning_history:_school_vs._self-directed_learning)。
+这是学校教育的最大弊病之一:学生们总是抱怨学校太无聊或太辛苦。学生们不快乐，这与系统背道而驰。如果我们保持旧的课堂学习制度，这个问题就不能被有效地解决。在一个总是因为不同的激情、不同的兴趣、不同的天赋、不同的学习速度而导致知识差异的群体中，优化学习是不可能的。唯一有效的优化解决方案是[自我导向学习](https://supermemo.guru/wiki/Learning_history:_school_vs._self-directed_learning)。
 
 ## 5.4 老师的困境
 
@@ -60,7 +60,7 @@
 
 综上所述，我们不能指望自主学习总是用有用的知识来充实我们的头脑。社交媒体因八卦和琐事而繁荣。青少年和成年人都可能在 Facebook 上消磨数不清的时间，却找不到有用的东西。我们似乎从来不会对社交互动感到厌烦，手机里不停地传来各种各样的闲聊声，满足了我们对新奇事物的渴望。
 
-对于许多有天赋的孩子来说，[自主学习](https://supermemo.guru/wiki/Learning_history:_school_vs._self-directed_learning)是他们腾飞所需要的。对于所有寻求有价值知识的孩子来说，通用的方法是，**在任何校正系统的引导下[自主学习](https://supermemo.guru/wiki/Learning_history:_school_vs._self-directed_learning)。**这个校正者可以是父母、老师或同龄人(包括年长的同龄人)。学习轨迹校正器需要**在[最佳推进区](https://supermemo.guru/wiki/Push_zone)**，以确保正确的学习轨迹而又不会扰乱系统。当然，没有比成熟的自我意识更好的校正者，只有一点自律。受过教育的成年人应该理解终身学习的必要性，并理解学习进步的正确方向。理想情况下，生活本身是学习轨迹的最佳校正器。
+对于许多有天赋的孩子来说，[自我导向学习](https://supermemo.guru/wiki/Learning_history:_school_vs._self-directed_learning)是他们腾飞所需要的。对于所有寻求有价值知识的孩子来说，通用的方法是，**在任何校正系统的引导下[自我导向学习](https://supermemo.guru/wiki/Learning_history:_school_vs._self-directed_learning)。**这个校正者可以是父母、老师或同龄人(包括年长的同龄人)。学习轨迹校正器需要**在[最佳推进区](https://supermemo.guru/wiki/Push_zone)**，以确保正确的学习轨迹而又不会扰乱系统。当然，没有比成熟的自我意识更好的校正者，只有一点自律。受过教育的成年人应该理解终身学习的必要性，并理解学习进步的正确方向。理想情况下，生活本身是学习轨迹的最佳校正器。
 
 ## 5.6 上学热情
 
@@ -68,7 +68,7 @@
 
 > 个人轶事。[为什么要用轶事？](https://supermemo.guru/wiki/Why_use_anecdotes%3F)
 >
-> 历史总是惊人的相似，我怀着极大的期望和快乐的期待开始了我所有的学校生活。小学、中学和我的两所大学都是这样。在所有情况下，热情都很快消失了。通常在第一天或第一堂课之后！然而，有时会出现相反的过程。当我因为纪律原因被一所学校开除时，我来到了一所期望值最低的新学校。这实际上帮助我提升了一段时间的热情。在一位[好老师](https://supermemo.guru/wiki/Great_teachers_change_the_world)的帮助下，我度过了几个月的学校历险。同样，一位伟大的老师或[自主学习的自由](https://supermemo.guru/wiki/Learning_history:_school_vs._self-directed_learning)在后来帮助我从学校中获得了一些乐趣。如果我在波兰的学校里一遍又一遍地模拟我自己的生活，大部分时间我都会失去对学习的热爱。与之相反的快乐过程只留给少数幸运的人，他们遇到了幸运的环境或幸运的自己的倾向。
+> 历史总是惊人的相似，我怀着极大的期望和快乐的期待开始了我所有的学校生活。小学、中学和我的两所大学都是这样。在所有情况下，热情都很快消失了。通常在第一天或第一堂课之后！然而，有时会出现相反的过程。当我因为纪律原因被一所学校开除时，我来到了一所期望值最低的新学校。这实际上帮助我提升了一段时间的热情。在一位[好老师](https://supermemo.guru/wiki/Great_teachers_change_the_world)的帮助下，我度过了几个月的学校历险。同样，一位伟大的老师或[自我导向学习的自由](https://supermemo.guru/wiki/Learning_history:_school_vs._self-directed_learning)在后来帮助我从学校中获得了一些乐趣。如果我在波兰的学校里一遍又一遍地模拟我自己的生活，大部分时间我都会失去对学习的热爱。与之相反的快乐过程只留给少数幸运的人，他们遇到了幸运的环境或幸运的自己的倾向。
 
 ## 5.7 用 SuperMemo 加强学习内驱力
 
@@ -78,7 +78,7 @@
 >
 > 我所知道的[学习内驱力](https://supermemo.guru/wiki/Learn_drive)中最强大的人工催化剂是[渐进学习](http://help.supermemo.org/wiki/Incremental_learning)。SuperMemo 中的间隔重复往往会一遍又一遍地提到相同的旧材料。学习中的[水蛭](http://help.supermemo.org/wiki/Glossary:Leech)会毒害复习的乐趣。[渐进学习](https://supermemo.guru/wiki/Incremental_learning)使得新材料的流入与旧材料的复习交织在一起成为可能。[知识树](http://help.supermemo.org/wiki/Glossary:Knowledge_tree)的不断巩固为“未完成”的叶子提供了持续的增长。这些充当了新鲜事物的吸引者。在传统学习中，遗忘往往会瓦解知识结构，导致“树的表面”的渐进停滞。在[渐进学习](http://help.supermemo.org/wiki/Incremental_learning)中，这个表面不断增加，在新奇发现方面提供了越来越大的潜力。如果你对学习的热情在下降，考虑[渐进学习](http://help.supermemo.org/wiki/Incremental_learning)。慢慢来！或者，励志读物也可以起到类似的作用。
 >
-> 如果你在学校遇到无聊或无法理解的话题，你可能需要忍受45分钟的无所作为。在[渐进学习](https://supermemo.guru/wiki/Incremental_learning)中，你可以在几秒钟内转换科目，改变优先顺序，重新安排学习时间，或者在最佳时间窗内忍受过度复杂的痛苦，希望获得一些知识成果(参见:[推进区](https://supermemo.guru/wiki/Push_zone))。在[渐进学习](https://supermemo.guru/wiki/Incremental_learning)中，你可能会停留在舒适区，偶尔进入[推进区](https://supermemo.guru/wiki/Push_zone)，远离浪费时间的倒退区。今天看来太难的一个主题明天会变得容易。你永远不需要徒劳地忍受复杂。一旦你准备好了，你可以冒险进入同一个领域。在[渐进学习](https://supermemo.guru/wiki/Incremental_learning)中，你使用你的学习内驱力作为强大的指导来优化你的选择。
+> 如果你在学校遇到无聊或无法理解的话题，你可能需要忍受45分钟的无所作为。在[渐进学习](https://supermemo.guru/wiki/Incremental_learning)中，你可以在几秒钟内转换科目，改变优先顺序，重新安排学习时间，或者在最佳时间窗内忍受过度复杂的痛苦，希望获得一些知识成果（参见：[推进区](https://supermemo.guru/wiki/Push_zone)）。在[渐进学习](https://supermemo.guru/wiki/Incremental_learning)中，你可能会停留在舒适区，偶尔进入[推进区](https://supermemo.guru/wiki/Push_zone)，远离浪费时间的倒退区。今天看来太难的一个主题明天会变得容易。你永远不需要徒劳地忍受复杂。一旦你准备好了，你可以冒险进入同一个领域。在[渐进学习](https://supermemo.guru/wiki/Incremental_learning)中，你使用你的学习内驱力作为强大的指导来优化你的选择。
 >
 > > [渐进学习](https://supermemo.guru/wiki/Incremental_learning)是[学习内驱力](https://supermemo.guru/wiki/Learn_drive)最强大的催化剂
 
@@ -106,19 +106,19 @@
 >
 > 我一直对人类生物学感兴趣。在这里我再次声明，我在学校学到的很少，在家里学到的很多，用 SuperMemo 学到的更多，用[渐进学习](http://help.supermemo.org/wiki/Incremental_learning)学到非常多。
 >
-> 我一直在说"*弄清楚的越多，无知的边界就越长*"。我知道的越多，我就越知道我无知。了解自己的无知是学习的最好动力，我知道的越多，无知就越痛苦。遗忘也是一个原因。当我意识到即使是一个小学生也知道我不知道的事情时，我一直很生气。即使是 5 岁的孩子也能问出更好的问题。我认为，只要我保持扎实的心智能力，我的学习热情就会一直保持下去。
+> 我一直在说「*弄清楚的越多，无知的边界就越长*」。我知道的越多，我就越知道我无知。了解自己的无知是学习的最好动力，我知道的越多，无知就越痛苦。遗忘也是一个原因。当我意识到即使是一个小学生也知道我不知道的事情时，我一直很生气。即使是 5 岁的孩子也能问出更好的问题。我认为，只要我保持扎实的心智能力，我的学习热情就会一直保持下去。
 >
-> 至于食物的味道，我不确定其中有多少被真正输入大脑，又有多少来自那类似的机制，就如在一个保守的大脑里的知识一般。柏林墙倒塌后，我第一次有机会品尝贻贝。我 28 岁。在那个年纪，我们应该已经失去了扩大自己口味范围的能力。当我吃第一口时，我非常肯定我会呕吐。感觉像是酷刑。我可以对自己说十几次“这只是健康的食物，很多人喜欢它，用你的理智，为什么要变得情绪化……”，这没有多大帮助。我好不容易吞下了几口，吃完后才松了一口气。然而，我没有放弃。我又试了一次。我试图去适应我的最佳推进区，这个推进区变得非常窄。如果我太努力或太早尝试，我将终生憎恨贻贝。如果我尝试得太晚了，我就会忘记我在第一次经历中学到的东西。我第二次吃贻贝时稍微放松了一点。尽管经历了很多痛苦，我还是在那里发现了一些美味。几个月后，我和那些在早期接触到贻贝的人一样喜欢贻贝。那次经历中没有什么新奇的东西。然而，我的口味已经改变了。今天，我喜欢贻贝。美味！我真的被剥夺了在食物方面寻求新奇的能力吗？不完全是，我喜欢尝试各种香料和香料组合。我的朋友昨天在泰国吃了一只蝎子，他快乐的表情引起了我的兴趣。如果我在泰国...
+> 至于食物的味道，我不确定其中有多少被真正输入大脑，又有多少来自那类似的机制，就如在一个保守的大脑里的知识一般。柏林墙倒塌后，我第一次有机会品尝贻贝。我 28 岁。在那个年纪，我们应该已经失去了扩大自己口味范围的能力。当我吃第一口时，我非常肯定我会呕吐。感觉像是酷刑。我可以对自己说十几次「这只是健康的食物，很多人喜欢它，用你的理智，为什么要变得情绪化……」，这没有多大帮助。我好不容易吞下了几口，吃完后才松了一口气。然而，我没有放弃。我又试了一次。我试图去适应我的最佳推进区，这个推进区变得非常窄。如果我太努力或太早尝试，我将终生憎恨贻贝。如果我尝试得太晚了，我就会忘记我在第一次经历中学到的东西。我第二次吃贻贝时稍微放松了一点。尽管经历了很多痛苦，我还是在那里发现了一些美味。几个月后，我和那些在早期接触到贻贝的人一样喜欢贻贝。那次经历中没有什么新奇的东西。然而，我的口味已经改变了。今天，我喜欢贻贝。美味！我真的被剥夺了在食物方面寻求新奇的能力吗？不完全是，我喜欢尝试各种香料和香料组合。我的朋友昨天在泰国吃了一只蝎子，他快乐的表情引起了我的兴趣。如果我在泰国...
 >
 > 至于无聊，我自己的职业生涯也受制于同样的饱和和无聊的机制。
 >
 > 作为一名学生，我尝试了几十种编程语言。语言越有异国情调，就越有魅力。SuperMemo 是在 1987 年用 Pascal 开发的。从那以后，我固定在 Pascal 并停止了我的探究。**犬儒学派**的人会把这归因于衰老。我的解释不同。我使用最适合我的工具。我把我的探究时间留给了其他事情。我没有减少探究。我探究不同的方向。我在编程语言领域的学习内驱力已经得到了满足，但是我的整体学习内驱力仍然很饥渴。
 >
-> 像一个不成熟的学生一样，我也厌倦过间隔重复和记忆，说“在这个领域没有什么可学习或发现的”。我的同事，尤其是Krzysztof Biedalak和Janusz Murakowski，给了我一个小小的校正推送，说“[双变量记忆模型](http://www.super-memory.com/english/2vm.htm)可以使算法更简单，更容易实现、许可和推广”。当我开始探索这个干涸的领域，我就发现了无数我不知道的东西，并重新点燃了我对间隔重复的热情。讽刺的是，这个算法并没有变得那么简单，但事实是，熄灭的激情可以被重新点燃。
+> 像一个不成熟的学生一样，我也厌倦过间隔重复和记忆，说“在这个领域没有什么可学习或发现的”。我的同事，尤其是 Krzysztof Biedalak 和 Janusz Murakowski ，给了我一个小小的校正推送，说“[双变量记忆模型](http://www.super-memory.com/english/2vm.htm)可以使算法更简单，更容易实现、许可和推广”。当我开始探索这个干涸的领域，我就发现了无数我不知道的东西，并重新点燃了我对间隔重复的热情。讽刺的是，这个算法并没有变得那么简单，但事实是，熄灭的激情可以被重新点燃。
 
 ## 5.8 永恒的学习内驱力
 
-激情来来去去。这个过程是可控的。[自主学习](https://supermemo.guru/wiki/Self-directed_learning)是这种控制的最佳表现。间隔重复有助于从逐渐消退的激情中保持收益。反过来，这又有助于激情在需要时重新点燃。
+激情来来去去。这个过程是可控的。[自我导向学习](https://supermemo.guru/wiki/Self-directed_learning)是这种控制的最佳表现。间隔重复有助于从逐渐消退的激情中保持收益。反过来，这又有助于激情在需要时重新点燃。
 
 **对学习的热爱可以被很有效的抑制，然而它也可以被恢复和再生**
 
@@ -134,7 +134,7 @@
 
 - 健康的[学习内驱力](https://supermemo.guru/wiki/Learn_drive)是良好学习的基础
 
-- 自主学习是[学习动力](https://supermemo.guru/wiki/Learn_drive)的有效基础
+- 自我导向学习是[学习内驱力](https://supermemo.guru/wiki/Learn_drive)的有效基础
 
 - 任何现代教育体系的主要目标之一都应该是帮助[学习内驱力](https://supermemo.guru/wiki/Learn_drive)蓬勃发展
 
