术语表翻译至K

--- a/我再也不会把孩子送去学校/1.前言.md
+++ b/我再也不会把孩子送去学校/1.前言.md
@@ -8,7 +8,7 @@
 
 在梦想着[宏大的教育改革](https://supermemo.guru/wiki/Reform)时，我采取了一种不同寻常的方式：我主要和孩子们交谈，而不是和成年人交谈。我的文字很难理解，但对于一个聪明的，已经确切地知道并感受到我在说什么的孩子来说，它们更容易理解。
 
-我**不**相信我能说服许多家长、教育工作者或权威人士。我主要希望孩子们能从下而上开始革命。孩子们更开放，他们更了解自己的问题。而且, 考虑到亲情, 他们比我更有可能说服自己的父母。参见: [为什么这本书会失败](https://supermemo.guru/wiki/Why_is_it_hard_to_explain_an_effective_education_system%3F)
+我**不**相信我能说服许多家长、教育工作者或权威人士。我主要希望孩子们能从下而上开始革命。孩子们更开放，他们更了解自己的问题。而且, 考虑到亲情, 他们比我更有可能说服自己的父母。参见：[为什么这本书会失败](https://supermemo.guru/wiki/Why_is_it_hard_to_explain_an_effective_education_system%3F)
 
 ## 1.2 废除学校制度
 
@@ -28,7 +28,7 @@
 
 这本[书](https://supermemo.guru/wiki/Problem_of_Schooling)中的一些概念是独特的，我把这些归功于我30年来在基于[间隔重复](https://supermemo.guru/wiki/Free_learning)的[自由学习](https://supermemo.guru/wiki/Spaced_repetition)中的投入。伟人的工作已经扩展到一些关于记忆、睡眠、创造力和解决问题方面的研究。
 
-我愿意相信，我对孩子们的关心不亚于Gray 或 Holt，但我也带来了他们的工作中可能缺失的一个额外议程:我正在寻找一个方案，用于批量生产小诺贝尔奖得主、小研究人员、小工程师和小创造性问题解决者。好消息是，这个方案完全符合自由学习哲学，因为没有真正的自由，就没有真正的天才。换句话说，我从纯粹的爱转向了教育事业，这是一个很小的转变，任何孩子都不会因为这种转变而受到伤害。恰恰相反，纯粹的爱能培养出一个健康而有成就的孩子，这就是爱的满足。
+我愿意相信，我对孩子们的关心不亚于 Gray 或 Holt ，但我也带来了他们的工作中可能缺失的一个额外议程:我正在寻找一个方案，用于批量培养小诺贝尔奖得主、小研究人员、小工程师和小创造性问题解决者。好消息是，这个方案完全符合自由学习理念，因为没有真正的自由，就没有真正的天才。换句话说，我从纯粹的爱转向了教育事业，这是一个很小的转变，任何孩子都不会因为这种转变而受到伤害。恰恰相反，纯粹的爱能培养出一个健康而有成就的孩子，这就是爱的满足。
 
 ## 1.5 执行概要
 
