--- a/我再也不会把孩子送去学校/22.Glossary.md
+++ b/我再也不会把孩子送去学校/22.Glossary.md
@@ -49,13 +49,13 @@
 - [Fundamental law of learning](https://supermemo.guru/wiki/Fundamental_law_of_learning) - law stating that efficient learning is always pleasurable
 - [学习的基本规律](https://supermemo.guru/wiki/Fundamental_law_of_learning)——规律表明有效的学习总是令人愉快的
 - [Generalization](https://supermemo.guru/wiki/Generalization) - process in which details are forgotten for the big picture to emerge
-- [一般化](https://supermemo.guru/wiki/Generalization)——为了让大局浮现而忘记细节的过程。
+- [概括](https://supermemo.guru/wiki/Generalization)——为了让大局浮现而忘记细节的过程。
 - [Homeostatic sleep propensity](https://supermemo.guru/wiki/Homeostatic_sleep_propensity) - fatigue caused by *tiredness of waking*
 - [稳态睡眠倾向](https://supermemo.guru/wiki/Homeostatic_sleep_propensity)——因*醒着的时候的疲劳*而引起的睡意
 - [Homeschooling](https://supermemo.guru/wiki/Homeschooling) - home-based education
 - [家庭教育](https://supermemo.guru/wiki/Homeschooling)——以家庭为基础的教育
 - [Idiocracy problem](https://supermemo.guru/wiki/Idiocracy_problem) - problem of smart people having few or late children
-- 蠢蛋进化论问题——聪明的人少生或晚生孩子的问题
+- [蠢蛋进化论问题](https://supermemo.guru/wiki/Idiocracy_problem)——聪明的人少生或晚生孩子的问题
 - [Increading](https://supermemo.guru/wiki/Increading) - reading [incrementally](https://supermemo.guru/wiki/Incremental_reading)
 - [渐进的阅读](https://supermemo.guru/wiki/Increading)——在渐进阅读工具集帮助下的阅读
 - [Incremental learning](https://supermemo.guru/wiki/Incremental_learning) - method for mastering knowledge from the web (fast and durable)
@@ -63,12 +63,19 @@
 - [Incremental reading](https://supermemo.guru/wiki/Incremental_reading) - method of converting books and articles into durable knowledge in student's mind
 - [渐进阅读](https://supermemo.guru/wiki/Incremental_reading)——将书籍和文章转化为学生头脑中持久的知识的方法
 - [Incremental video](https://supermemo.guru/wiki/Incremental_video) - method of massive learning and review of lectures (e.g. from YouTube)
+- [渐进视频](https://supermemo.guru/wiki/Incremental_video)——大规模学习和复习讲座的方法（例如来自 YouTube ）
 - [Interference](https://supermemo.guru/wiki/Interference) - forgetting induced by new learning
+- [干扰](https://supermemo.guru/wiki/Interference)——学习知识导致的遗忘
 - [Learn drive](https://supermemo.guru/wiki/Learn_drive) - natural curiosity that drives learning
+- [学习内驱力](https://supermemo.guru/wiki/Learn_drive)——推动学习的天生好奇心
 - [Learned helplessness](https://supermemo.guru/wiki/Learned_helplessness) - loss of drives in conditions of loss of control
+- [习得性无助](https://supermemo.guru/wiki/Learned_helplessness)——在失去控制的情况下失去内驱力
 - [Learntropy](https://supermemo.guru/wiki/Learntropy) - measure of attractiveness of a lecture, book, etc.
+- [学习熵](https://supermemo.guru/wiki/Learntropy)——演讲、书籍等学习材料的吸引力的度量
 - [Knowledge darwinism](https://supermemo.guru/wiki/Knowledge_darwinism) - competition of memories for the best place in the [jigsaw puzzle](https://supermemo.guru/wiki/Jigsaw_puzzle) of memory
+- [知识达尔文主义](https://supermemo.guru/wiki/Knowledge_darwinism)——记忆在竞争记忆[拼图](https://supermemo.guru/wiki/Jigsaw_puzzle)中的最佳位置
 - [Knowledge redundancy](https://supermemo.guru/wiki/Knowledge_redundancy) - memorizing same memories in different contexts to boost [recall](https://supermemo.guru/wiki/Recall)
+- [知识冗余](https://supermemo.guru/wiki/Knowledge_redundancy)——在不同的情境中记忆相同的记忆，以促进[回忆](https://supermemo.guru/wiki/Recall)
 - [Knowledge valuation network](https://supermemo.guru/wiki/Knowledge_valuation_network) - any neural subsystem capable of estimating the value of knowledge
 - [Memory complexity](https://supermemo.guru/wiki/Memory_complexity) - complexity of memory that determines how difficult it is to retain it
 - [Memory optimization](https://supermemo.guru/wiki/Memory_optimization_in_sleep) - process in which memories get better organized in sleep
