--- a/我再也不会把孩子送去学校/4.学习内驱力.md
+++ b/我再也不会把孩子送去学校/4.学习内驱力.md
@@ -27,7 +27,7 @@
 
 在神经网络方面，学习内驱力可以由非常简单的机制运行，这些机制可能产生一系列类似的轨迹，用于探索环境。如果你把一个蹒跚学步的孩子在一个新环境中的轨迹画出来，你可能会发现这很难与蟑螂产生的轨迹图区分。然而，最终的记忆效果却大不相同。
 
-**好奇心**这个术语可以用来代替学习内驱力。它有精确的科学定义，但在通俗使用中也有负面含义。学习内驱力是完全正面的。学习内驱力是使人类登上月球的本能。我们说「**好奇心害死猫**」。波兰有句谚语说「**好奇心是下地狱的第一步**」。我说「**好奇是知识的第一步**」。我们会用“病态的好奇心”这样的词，或者把好奇心和一位老太太伸长脖子从窗户里探出头来听最新的八卦联系起来。好奇心与动机和奖励的联系也玷污了它。孩子们可能会好奇糖果店什么时候开门。这种好奇心可以在没有学习内驱力的情况下产生。学校的成绩会产生“好奇心”，而这种「好奇心」**不会**驱使孩子走向成功。学习内驱力是基于信息的，不太可能导向死胡同。如果*好奇心内驱力*这个词是建立在一个被证实的理论之上，并且被精确地定义为无所不在的（而不是由不确定性产生的），那么它就可以作为学习内驱力。在这篇文章中，我解释了我们需要珍惜和培养教育中的学习内驱力。我经常听到这样的话：*好奇心可以等待，学习才是最优先的*。*学习内驱力*这个词没有这样的歧义。如果我一直说「*我们需要培养好奇心*」，没有人会认真对待!
+**好奇心**这个术语可以用来代替学习内驱力。它有精确的科学定义，但在通俗使用中也有负面含义。学习内驱力是完全正面的。学习内驱力是使人类登上月球的本能。我们说「**好奇心害死猫**」。波兰有句谚语说「**好奇心是下地狱的第一步**」。我说「**好奇是知识的第一步**」。我们会用“病态的好奇心”这样的词，或者把好奇心和一位老太太伸长脖子从窗户里探出头来听最新的八卦联系起来。好奇心与动机和奖励的联系也玷污了它。孩子们可能会好奇糖果店什么时候开门。这种好奇心可以在没有学习内驱力的情况下产生。学校的成绩会产生「好奇心」，而这种「好奇心」**不会**驱使孩子走向成功。学习内驱力是基于信息的，不太可能导向死胡同。如果*好奇心内驱力*这个词是建立在一个被证实的理论之上，并且被精确地定义为无所不在的（而不是由不确定性产生的），那么它就可以作为学习内驱力。在这篇文章中，我解释了我们需要珍惜和培养教育中的学习内驱力。我经常听到这样的话：*好奇心可以等待，学习才是最优先的*。*学习内驱力*这个词没有这样的歧义。如果我一直说「*我们需要培养好奇心*」，没有人会认真对待!
 
 **无聊易感性**或**无聊不耐受**与学习内驱力非常接近，然而，它强调不耐烦。它是一种排斥力，而学习内驱力是基于对新知识渴求。两者可能基于相同的机制，但是本文需要关注学习内驱力的积极方面。在我的文章中，以学习内驱力代替无聊易感性，你会看到内涵的戏剧性变化。
 
@@ -61,7 +61,7 @@
 
 - [好奇心与探索](http://www.csun.edu/~vcpsy00h/students/explore.htm)
 
-## 4.6 总结: 学习内驱力
+## 4.6 总结：学习内驱力
 
 - 学习内驱力是大脑寻求新信息的一种自然倾向
 
