--- a/我再也不会把孩子送去学校/6.Learn drive and reward.md
+++ b/我再也不会把孩子送去学校/6.Learn drive and reward.md
@@ -22,7 +22,7 @@
 
 你们可能从物理课回忆起熵是无序的度量，热力学第二定律表明孤立系统的熵永远不会减小。这是一种形象的物理定律，我们会终生铭记。这是[普遍适用的](https://supermemo.guru/wiki/Applicability)。
 
-信息论中有一个姊妹概念叫[香农熵](https://en.wikipedia.org/wiki/Entropy_(information_theory))。它可以理解为由一个来源发送的信息的平均值。例如，假设一个频道连续不断地将一串相同的字母传送到无穷远处(例如，一串As :“AAA……”)中。这是完全可以预测的，并且熵为零。我们不会从这样的渠道学习。
+信息论中有一个姊妹概念叫[香农熵](https://en.wikipedia.org/wiki/Entropy_(information_theory))。它可以理解为由一个来源发送的信息的平均值。例如，假设一个频道连续不断地将一串相同的字母传送到无穷远处(例如，一串As :「AAA……」)中。这是完全可以预测的，并且熵为零。我们不会从这样的渠道学习。
 
 [克劳德·香农](https://en.wikipedia.org/wiki/Claude_Shannon)在1948年提出了信息熵的概念。不久之后，科学家们开始假设信息渠道的熵是否会对大脑感知渠道价值的方式产生强大影响。1957年，[迈耶假设](https://supermemo.guru/wiki/Music_and_entropy)音乐的熵决定了人们对音乐之美的感知。他的结论是，较高的熵可能会导致主观紧张，这与更有意思的音乐片段有关。
 
@@ -40,11 +40,11 @@
 
 ## 6.4 大脑中的熵检测器
 
-大脑无法有效检测撞击视网膜或耳膜的信号的熵。就像显示器上的像素一样，视网膜细胞也不知道它们传达了什么。如果检测器，如海马体，要根据熵而响应，它必须对来自内嗅皮层的输入(即海马体本身的输入)进行操作。这些输入将在高度处理后显示信号。它可能会呈现一个概念，而不是像素。感觉输入端的高熵信号将在神经选择、完善和[一般化](https://supermemo.guru/wiki/Generalization)过程的早期失去大部分噪声成分。信噪比将决定丢失多少信息。噪音越大，损失越大。我们越聪明，这个处理过程就越有选择性，在那个阶段会丢失越多信息。这很好。我们对细节视而不见。模式识别就像一个确定性函数，根据定义，它会导致熵的下降。复杂的模式可能会变成简单的概念。这些概念将为检测器提供实际输入，例如海马体。
+大脑无法有效检测撞击视网膜或耳膜的信号的熵。就像显示器上的像素一样，视网膜细胞也不知道它们传达了什么。如果检测器，如海马体，要根据熵而响应，它必须对来自内嗅皮层的输入(即海马体本身的输入)进行操作。这些输入将在高度处理后显示信号。它可能会呈现一个概念，而不是像素。感觉输入端的高熵信号将在神经选择、完善和[概括](https://supermemo.guru/wiki/Generalization)过程的早期失去大部分噪声成分。信噪比将决定丢失多少信息。噪音越大，损失越大。我们越聪明，这个处理过程就越有选择性，在那个阶段会丢失越多信息。这很好。我们对细节视而不见。模式识别就像一个确定性函数，根据定义，它会导致熵的下降。复杂的模式可能会变成简单的概念。这些概念将为检测器提供实际输入，例如海马体。
 
 请注意，实验中产生的视觉流证明[海马体对信号熵的反应](https://www.ncbi.nlm.nih.gov/pubmed/15896570)具有高度[象征性](https://supermemo.guru/wiki/Abstract_knowledge)。因此，视觉流在处理过程中丢失的信息会少得多。这一高度简化和[概念化](https://supermemo.guru/wiki/Generalization)的信息将会被扫描为意外，并为整个[学习内驱力](https://supermemo.guru/wiki/Learn_drive)系统提供指引。这就是为什么在这种情况下，海马体似乎对输入熵有反应。
 
-上面的推理解释了为什么低熵和高熵的感觉信号都是无趣的。经过一定程度的处理后，高熵信号可能会失去所有噪声，并向海马体传递低熵输入。然后，我们观察感官输入时“最佳熵”水平的错觉。我们需要一个新的概念，**学习熵**，来帮助我们准确地判断信号的吸引力。学习熵需要考虑信息的高度处理，然后才能激活大脑中的奖励中心。本文稍后将讨论[学习熵](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#learn entropy)。
+上面的推理解释了为什么低熵和高熵的感觉信号都是无趣的。经过一定程度的处理后，高熵信号可能会失去所有噪声，并向海马体传递低熵输入。然后，我们观察感官输入时「最佳熵」水平的错觉。我们需要一个新的概念，**学习熵**，来帮助我们准确地判断信号的吸引力。学习熵需要考虑信息的高度处理，然后才能激活大脑中的奖励中心。本文稍后将讨论[学习熵](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#learn entropy)。
 
 ## 6.5 信息处理速度
 
@@ -54,23 +54,23 @@
 
 我喜欢以1.4倍的速度听讲座。我用1.3倍来听更有挑战性的片段。虽然我从来没有加快 [Fareed Zakaria](https://en.wikipedia.org/wiki/Fareed_Zakaria_GPS) 的速度，但是我享受这个节目中的每一条信息。课堂上的学生没有加速或减速按钮。即使是暂停按钮，如果有的话，也很难去点击，因为它可能会惹恼其他学生。
 
-在学校里，传授的速度常常超过学生的处理能力。这导致了微不足道的学习和强大的压力。没有时间[欣赏高速列车窗外的风景](https://supermemo.guru/wiki/Futility_of_schooling)。在麻省理工学院，他们称之为“[*用消防水管喝水*](https://supermemo.guru/wiki/Futility_of_schooling)”。
+在学校里，传授的速度常常超过学生的处理能力。这导致了微不足道的学习和强大的压力。没有时间[欣赏高速列车窗外的风景](https://supermemo.guru/wiki/Futility_of_schooling)。在麻省理工学院，他们称之为「[*用消防水管喝水*](https://supermemo.guru/wiki/Futility_of_schooling)」。
 
 ## 6.6 概率与知识
 
 低概率事件携带更多信息。平均信息决定熵。预备知识决定了对信息通道的熵的感知。
 
-如果你碰巧收听了广播新闻，并且听到“珍妮特·杰克逊生了一个孩子”，你的兴趣程度将取决于事件发生的概率。如果你不知道珍妮特·杰克逊是谁，这是一个高概率事件。如果[每天约有35万名女性分娩](http://www.theworldcounts.com/stories/How-Many-Babies-Are-Born-Each-Day)，这已经不是新闻，也不是新鲜事或有趣的事。一名士兵在战争中的第一次死亡将成为新闻，但是当死亡人数增加到成千上万时，年轻的生命将只是一个统计数字。
+如果你碰巧收听了广播新闻，并且听到「珍妮特·杰克逊生了一个孩子」，你的兴趣程度将取决于事件发生的概率。如果你不知道珍妮特·杰克逊是谁，这是一个高概率事件。如果[每天约有35万名女性分娩](http://www.theworldcounts.com/stories/How-Many-Babies-Are-Born-Each-Day)，这已经不是新闻，也不是新鲜事或有趣的事。一名士兵在战争中的第一次死亡将成为新闻，但是当死亡人数增加到成千上万时，年轻的生命将只是一个统计数字。
 
-如果你碰巧认识珍妮特·杰克逊或者喜欢她的音乐，那么生孩子的概率会急剧下降到“*一生一次*”的水平(对珍妮特来说)。这会让你变得有兴趣。然而，如果你记得珍妮特是古代情景喜剧中的一个漂亮女孩，她生孩子可能会被归为“*不可能！*”。如果你意识到珍妮特 50 岁了，并且你知道更年期，你可能会立刻对她的情况产生病态的好奇。你预备知识决定了你对信息的反应。信道没有最佳熵水平。只有最适合特定大脑的熵水平。在这一点上，你可能会看到，我们需要引入一个新的衍生概念，我们在[之后](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#learn entropy)将称之为**学习熵**。学习熵将决定一个特定的通道对一个特定的大脑的吸引力。
+如果你碰巧认识珍妮特·杰克逊或者喜欢她的音乐，那么生孩子的概率会急剧下降到「*一生一次*」的水平(对珍妮特来说)。这会让你变得有兴趣。然而，如果你记得珍妮特是古代情景喜剧中的一个漂亮女孩，她生孩子可能会被归为「*不可能！*」。如果你意识到珍妮特 50 岁了，并且你知道更年期，你可能会立刻对她的情况产生病态的好奇。你预备知识决定了你对信息的反应。信道没有最佳熵水平。只有最适合特定大脑的熵水平。在这一点上，你可能会看到，我们需要引入一个新的衍生概念，我们在[之后](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#learn entropy)将称之为**学习熵**。学习熵将决定一个特定的通道对一个特定的大脑的吸引力。
 
 如果你喜欢珍妮特式的八卦，那么这个八卦频道会给你带来恰到好处的意外。它将提供学习匹配。如果你缺乏相关知识或者你的优先级不同，你就会对它置之不理。你的学习重点也将决定你在特定领域的知识水平，以及你对任何特定渠道及其信息熵的反应。
 
 ## 6.7 可预见性和意外
 
-概率和复杂性不是信息感知的唯一组成部分。我们似乎在寻找可预测性和意外之间的平衡。我喜欢乡土爵士乐。在这种类型的音乐中，低音部通常是高度可预测的，伴着[最佳的切分音数量](https://supermemo.guru/wiki/Impact_of_syncopation_on_the_pleasure_of_music)。这使得身体运动与节奏同步变得容易。然而，如果没有意外，乡土爵士乐就不会有意思。在这里，复杂的爵士乐即兴表演会刺激负责检测“意外”的神经系统。此外，经过几十年的学习，我的大脑有一个完整的信号数据库。可能有一个我认识并喜欢的伴唱歌手的声音。我的大脑已经准备好迎接乡土爵士乐了。
+概率和复杂性不是信息感知的唯一组成部分。我们似乎在寻找可预测性和意外之间的平衡。我喜欢乡土爵士乐。在这种类型的音乐中，低音部通常是高度可预测的，伴着[最佳的切分音数量](https://supermemo.guru/wiki/Impact_of_syncopation_on_the_pleasure_of_music)。这使得身体运动与节奏同步变得容易。然而，如果没有意外，乡土爵士乐就不会有意思。在这里，复杂的爵士乐即兴表演会刺激负责检测「意外」的神经系统。此外，经过几十年的学习，我的大脑有一个完整的信号数据库。可能有一个我认识并喜欢的伴唱歌手的声音。我的大脑已经准备好迎接乡土爵士乐了。
 
-我喜欢肯·罗宾逊关于创造力的讲座。在某种程度上，它们是高度可预测的。我完全同意罗宾逊，所以你可以说罗宾逊助长了我的证实性偏见。这很愉快。当人们与我们观点一致时，我们喜欢说“英雄所见略同”。但是，如果罗宾逊继续重复同样陈腔滥调，讲述学校如何扼杀创造力，他将失去吸引力。熵可以解释为平均预期[意外](https://en.wikipedia.org/wiki/Self-information)。罗宾逊的传授带来了很多意外。他可能会以不同的、不同寻常的创造性方式描绘相同的模型。因此，[大脑接收新的信息，产生概括，并确认现有的模型。](https://en.wikipedia.org/wiki/Self-information)从新的语境中得出的概括可以增强[知识的一致性](https://supermemo.guru/wiki/Knowledge_coherence)。在基于已知模型的消息中，这是一种非常令人愉快的补充。
+我喜欢肯·罗宾逊关于创造力的讲座。在某种程度上，它们是高度可预测的。我完全同意罗宾逊，所以你可以说罗宾逊助长了我的证实性偏见。这很愉快。当人们与我们观点一致时，我们喜欢说「英雄所见略同」。但是，如果罗宾逊继续重复同样陈腔滥调，讲述学校如何扼杀创造力，他将失去吸引力。熵可以解释为平均预期[意外](https://en.wikipedia.org/wiki/Self-information)。罗宾逊的传授带来了很多意外。他可能会以不同的、不同寻常的创造性方式描绘相同的模型。因此，[大脑接收新的信息，产生概括，并确认现有的模型。](https://en.wikipedia.org/wiki/Self-information)从新的语境中得出的概括可以增强[知识的连贯性](https://supermemo.guru/wiki/Knowledge_coherence)。在基于已知模型的消息中，这是一种非常令人愉快的补充。
 
 罗宾逊的讲座在可预测性和意外之间找到了很好的平衡。
 
@@ -86,7 +86,7 @@
 
 视觉流的熵的测量不一定是信息通道令人愉悦的能力的可靠指标。流向海马体的所有信息都经过高度处理。代表美丽海滩的像素流将被加工成一系列形状和纹理。反过来，这些模型将依次模拟棕榈树、沙子和大海。这种高度压缩的简单信息将决定对信息输入的最初响应。
 
-扫描环境中的信息如同扫描食物的气味。气味很诱人，但只有实际去吃才是真正的回报。这就是熵扫描不需要回报的原因。它所需要做的就是获得奖励。如前所述，前海马对熵有反应，然而实验设计确保熵是指输入过程中不会丢失太多信息的简单形状的组合。与其说是信号熵，不如说是信息比较器(如海马)的输入熵。重要的不是视网膜像素，而是比较器输入上表示的手掌形状。对于比较器来说，灰度或静态噪声的高熵模式与白度或静音没有区别。它们在输入时都会带来相同的熵:零。这就是为什么我用“[学习熵](https://supermemo.guru/wiki/learn entropy)”这个词来准确地描述信息渠道的吸引力。
+扫描环境中的信息如同扫描食物的气味。气味很诱人，但只有实际去吃才是真正的回报。这就是熵扫描不需要回报的原因。它所需要做的就是获得奖励。如前所述，前海马对熵有反应，然而实验设计确保熵是指输入过程中不会丢失太多信息的简单形状的组合。与其说是信号熵，不如说是信息比较器(如海马)的输入熵。重要的不是视网膜像素，而是比较器输入上表示的手掌形状。对于比较器来说，灰度或静态噪声的高熵模式与白度或静音没有区别。它们在输入时都会带来相同的熵:零。这就是为什么我用「[学习熵](https://supermemo.guru/wiki/learn entropy)」这个词来准确地描述信息渠道的吸引力。
 
 响应信号熵的前海马体因发现Halle •贝瑞神经元而闻名(见[更多](http://phys.org/news/2005-06-single-cell-recognition-halle-berry-neuron.html))。研究人员将电极植入一名同意接受治疗的癫痫患者体内，发现在不同情境下，单个神经元对 Halle Berry 图像的反应是一致的。同样的神经元也会对Halle Berry的名字做出反应。与此同时，后海马体对 Jennifer Aniston 的反应可能不那么一致(这可能是前一层神经处理的迹象)。
 
@@ -125,9 +125,9 @@
 
 信息渠道的可靠性很重要。如果错误率高，[学习内驱力](https://supermemo.guru/wiki/Learn_drive)可能会减弱。当彭齐亚斯和威尔逊在1964年发现宇宙微波背景辐射时，并没有"Wow!" 。困惑的研究人员继续从他们的无线电天线上移除鸽子粪便。解释神秘噪音时，他们优先考虑了鸽子粪的原因。1978年，彭齐亚斯和威尔逊因为他们的发现获得了诺贝尔奖。
 
-当一个科学家有了一个发现，他可能会惊呼“尤里卡！”和手舞足蹈。他大脑中某个地方的神经网络产生了一种[一般化](https://supermemo.guru/wiki/Generalization)，结果发出了奖励信号。这进一步传播，让一个老人像孩子一样在实验室里跳跃。
+当一个科学家有了一个发现，他可能会惊呼「尤里卡！」和手舞足蹈。他大脑中某个地方的神经网络产生了一种[概括](https://supermemo.guru/wiki/Generalization)，结果发出了奖励信号。这进一步传播，让一个老人像孩子一样在实验室里跳跃。
 
-人生早期也是如此。一个在空房间里蹒跚学步的孩子会寻找环境中的低概率成分，比如彩色物体、新玩具等等。当一个蹒跚学步的孩子用勺子从桌子上掉下来做实验时，她就像一个小科学家。然而，当大脑做出“*所有落下的勺子都会发出声音*”的[一般化](https://supermemo.guru/wiki/Generalization)时，她也会得到奖励。她可能会以和快乐的科学家完全一样的方式庆祝，与年龄无关。一个大大的微笑是第一个明确的信号。
+人生早期也是如此。一个在空房间里蹒跚学步的孩子会寻找环境中的低概率成分，比如彩色物体、新玩具等等。当一个蹒跚学步的孩子用勺子从桌子上掉下来做实验时，她就像一个小科学家。然而，当大脑做出「*所有落下的勺子都会发出声音*」的[概括](https://supermemo.guru/wiki/Generalization)时，她也会得到奖励。她可能会以和快乐的科学家完全一样的方式庆祝，与年龄无关。一个大大的微笑是第一个明确的信号。
 
 在由[学习内驱力](https://supermemo.guru/wiki/Learn_drive)控制的各种形式的学习中，同样的快乐在较小程度上也会发生。不管我们是否了解名人或岩石的化学成分。事情很有趣，因为它们通过学习内驱力机制奖励大脑。
 
@@ -137,13 +137,13 @@
 
 ### 6.10.1 知识的评估
 
-大脑处理过的所有知识片段都会立即评估其相关性、[一致性](https://supermemo.guru/wiki/Coherence)和价值。我们立即知道信息是否可以理解和有用。当它[不一致](https://supermemo.guru/wiki/Consistency)、[不连贯](https://supermemo.guru/wiki/Coherence)或不相关时，我们也常常会立即注意到。
+大脑处理过的所有知识片段都会立即评估其相关性、[连贯性](https://supermemo.guru/wiki/Coherence)和价值。我们能立即知道这些信息是否可以理解的和有用的。当它们[前后矛盾](https://supermemo.guru/wiki/Consistency)、[不连贯](https://supermemo.guru/wiki/Coherence)或不相关时，我们也常常会立即注意到。
 
-不寻常和令人惊讶的知识非常有价值，然而，从大脑的角度来看，概率并非价值的最佳反映。有极不可能发生的低重要性事件(例如，小行星撞击遥远的行星系统)，也有很可能的发生改变一个人生活的事件(例如，“*你愿意嫁给我吗*？”)。
+不寻常和令人惊讶的知识非常有价值，然而，从大脑的角度来看，概率并非价值的最佳反映。有极不可能发生的低重要性事件(例如，小行星撞击遥远的行星系统)，也有很可能的发生改变一个人生活的事件（例如，「*你愿意嫁给我吗*？」）。
 
 ### 6.10.2 感性脑和理性脑
 
-**知识评估网络**是一个基于感性评估和理性评估相结合的评估系统。感性评估将把信息与原始大脑中枢负责饥饿、口渴、性冲动等的奖励联系起来。理性估值将以知识为基础。纯粹感性评估的一个例子是对“*最近的快餐店在哪里？*”的回答。基于知识的评估可能更加复杂和高度网络化，也就是说，依赖于一个次级评估网络。对“*哪本书最适合我的考试？*”的回答通过一个人的目标来评估，包括通过考试，获得影响工作前景的学位，并为终生目标做出贡献。感性和理性的评估在解剖学上是分开的。感性评估来自于被比喻为三位一体大脑中更古老的部分:爬行动物和古哺乳动物结构。例如，丘脑处理的特定刺激可能会向杏仁体发送单独的信号进行感性评估，向新皮层发送单独的信号进行理性评估。感性化的大脑在基因上更古老。个性和教育决定了理性评估是否能控制或超越感性评估。
+**知识评估网络**是一个基于感性评估和理性评估相结合的评估系统。感性评估将把信息与原始大脑中枢负责饥饿、口渴、性冲动等的奖励联系起来。理性估值将以知识为基础。纯粹感性评估的一个例子是对「*最近的快餐店在哪里？*」的回答。基于知识的评估可能更加复杂和高度网络化，也就是说，依赖于一个次级评估网络。对「*哪本书最适合我的考试？*」的回答通过一个人的目标来评估，包括通过考试，获得影响工作前景的学位，并为终生目标做出贡献。感性和理性的评估在解剖学上是分开的。感性评估来自于被比喻为三位一体大脑中更古老的部分:爬行动物和古哺乳动物结构。例如，丘脑处理的特定刺激可能会向杏仁体发送单独的信号进行感性评估，向新皮层发送单独的信号进行理性评估。感性化的大脑在基因上更古老。个性和教育决定了理性评估是否能控制或超越感性评估。
 
 ### 6.10.3 快速思考中的决策树
 
@@ -157,7 +157,7 @@
 
 ### 6.10.4 教育中的评估网络
 
-大脑在几年几十年的学习过程中建立了一个评估网络。通过睡眠中的优化和[遗忘](https://supermemo.guru/wiki/Forgetting_curve)，网络被打磨和抛光，以实现高效运行。这使得采取估值捷径变得容易。一个学生在选择一本书时，可能不再把考试放在他整个人生的大背景中去考虑。他可能已经找到了一条捷径:“*在接下来的3个月里，我只想通过地质学*”。
+大脑在几年几十年的学习过程中建立了一个评估网络。通过睡眠中的优化和[遗忘](https://supermemo.guru/wiki/Forgetting_curve)，网络被打磨和抛光，以实现高效运行。这使得采取估值捷径变得容易。一个学生在选择一本书时，可能不再把考试放在他整个人生的大背景中去考虑。他可能已经找到了一条捷径:「*在接下来的3个月里，我只想通过地质学*」。
 
 知识评估网络是高度专业化的，个体间的差异很大。理性和感性之间的平衡会有所不同。目标之间的平衡会有所不同。评估网络在罪犯的思维中会有不同的形状，在怀有以人类利益为基础的崇高目标的研究人员的思维中也会有不同的形状。
 
@@ -169,7 +169,7 @@
 
 教育系统的主要问题是一种千篇一律的方法，在这种方法中，所有的孩子都以流水线的方式接受相同的知识，而很少考虑有效学习的关键组成部分:[学习内驱力](https://supermemo.guru/wiki/Learn_drive)。学习内驱力是一种完美的计算系统，它能将「大脑中代表知识的语义网络的当前状态」与「知识评估网络响应环境中可用信息而产生的当前输入」相匹配。如果这个孩子坚持要看 YouTube 上的视频，那么他自己的大脑就是最好的权威。所有干涉都会影响未来的独立性和创造性。
 
-虽然讲课老师可能会花45分钟给孩子灌输一长串符号，这些符号会产生低估值和可忽略不计的记忆，但是同一个孩子可以在3 - 5分钟内访问谷歌，识别出具有高价值的信息，并且容易编码终身保留。对于在这一过程中受过良好训练的孩子来说，在自学过程中获得知识的效率可能会提高一个数量级。当我说“数量级”时，我只是谦虚和保守。我不想遭到夸张的指责。我在本文其他地方列举了几个具体比较的例子(例如，[一个月内学习学校13年所教的知识](https://supermemo.guru/wiki/Schools_are_useless_in_teaching_English!#Inefficiency_of_schooling)，或者[在假期学习速度加快1600 %](https://supermemo.guru/wiki/Learning_history:_school_vs._self-directed_learning#Self-directed_acceleration) )。
+虽然讲课老师可能会花45分钟给孩子灌输一长串符号，这些符号会产生低估值和可忽略不计的记忆，但是同一个孩子可以在3 - 5分钟内访问谷歌，识别出具有高价值的信息，并且容易编码终身保留。对于在这一过程中受过良好训练的孩子来说，在自学过程中获得知识的效率可能会提高一个数量级。当我说「数量级」时，我只是谦虚和保守。我不想遭到夸张的指责。我在本文其他地方列举了几个具体比较的例子(例如，[一个月内学习学校13年所教的知识](https://supermemo.guru/wiki/Schools_are_useless_in_teaching_English!#Inefficiency_of_schooling)，或者[在假期学习速度加快1600 %](https://supermemo.guru/wiki/Learning_history:_school_vs._self-directed_learning#Self-directed_acceleration) )。
 
 在我谈到知识的金块时，彼得·泰尔谈到了[幂律](https://supermemo.guru/wiki/Thiel_on_power_law)：经过磨练的一小部分核心技能可以带来指数级回报。
 
@@ -191,7 +191,7 @@
 
 **我的学校积极地试图阻止我完成我整个职业生涯和未来最重要的事情**
 
-如果我更听话，更顺从，更善于忍受社会压力，我会成为一名“更好”的学生，在电路学、微积分、计量学和抽象代数的理论上投入更多时间。其结果是，这篇文章永远不会被写出来。这个网站也将不存在。
+如果我更听话，更顺从，更善于忍受社会压力，我会成为一名「更好」的学生，在电路学、微积分、计量学和抽象代数的理论上投入更多时间。其结果是，这篇文章永远不会被写出来。这个网站也将不存在。
 
 我不会用我现在的生活去换取任何研究或行业上的其他职业。通过产生基于强大的知识估值网络的抵抗，我挺过了否认我的攻击。
 
@@ -201,9 +201,9 @@
 
 ## 6.11 学习熵
 
-有许多因素会影响大脑对信息和信息渠道的感知和评估。在前面的章节中，我们已经注意到大脑不仅对熵有反应。还有许多因素可以调节单个信息的熵或意外的影响。这些因素包括:编码、传授速度、预处理(例如一般化、完善、识别等)。)，预备知识(包括估值、情绪价、渠道可靠性等)，最佳水平(受处理速度影响)，等等。 
+有许多因素会影响大脑对信息和信息渠道的感知和评估。在前面的章节中，我们已经注意到大脑不仅对熵有反应。还有许多因素可以调节单个信息的熵或意外的影响。这些因素包括：编码、传授速度、预处理（例如概括、完善、识别等），预备知识（包括估值、情绪价、渠道可靠性等），最佳水平（受处理速度影响），等等。 
 
-这一过程的复杂性要求有一个更好的概念来概括所有这些细微差别。我建议使用学习熵这个术语来描述从特定背景下的个人大脑的角度来看的教育渠道或信号的吸引力。
+这一过程的复杂性要求有一个更好的概念来封装所有这些细微差别。我建议使用学习熵这个术语来描述从特定背景下的个人大脑的角度来看的教育渠道或信号的吸引力。
 
 > **学习熵是由学习内驱力系统决定的任何教育信号的吸引力**。
 
@@ -243,16 +243,16 @@
 
 ## 6.14 最佳信息传授
 
-在学校教育中，我们可以设想一个处于最佳[学习熵](https://supermemo.guru/wiki/learn entropy)水平的讲座，在这个讲座中一个学生不断地说“哇!哇!”她保持尽可能快地记笔记。但是，更常见的情况是，讲座会发出一个高熵信息或让人感到无聊。它的学习熵会很低，甚至是负数。
+在学校教育中，我们可以设想一个处于最佳[学习熵](https://supermemo.guru/wiki/learn entropy)水平的讲座，在这个讲座中一个学生不断地说「哇!哇!」她保持尽可能快地记笔记。但是，更常见的情况是，讲座会发出一个高熵信息或让人感到无聊。它的学习熵会很低，甚至是负数。
 如果最佳学习熵水平取决于学生，老师该如何最好地向课堂传授知识？有时候适合所有人的传授是不可能的。换句话说，这困难到需要天才的教学技能。对大多数老师来说，他们的传授使大多数孩子感到无聊或沮丧。
 
 在课堂上，少数幸运儿可能会理解大部分信息。对于一小部分有天赋的人来说，这堂课可能没有带来多少新知识。对他们来说这很无聊。对于其他孩子来说，信息的复杂性超出了他们的理解水平。在这种情况下，如果他们试图理解，老师的讲课可能会令他们挫败。一个关于弦理论的讲课可能相当于一个随机打乱排列的英语单词序列的噪音。讲课是一种浪费时间的活动。诺贝尔奖得主[ Carl Wieman ](https://supermemo.guru/wiki/Carl_Wieman)把它比作[放血](https://supermemo.guru/wiki/Wieman:_Lectures_make_no_sense)。
 
-为了避免负学习熵带来的挫败感，学生们会像你从我[前面](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Prior_knowledge_in_information_seeking)提到的泰国频道换台一样「换台"」。孩子们会忽略来自老师的"静电噪音"，并收听到其他“频道”，这些频道有更合适的学习熵水平（例如桌下的手机上的Facebook）。即使他们的理解能力很好，所传授的知识也可能无法与他们目前的知识互补。如果这些知识不能产生[高质量高价值](https://supermemo.guru/wiki/Knowledge_valuation_network)的一般化，就会被认为是显而易见或毫无关联的。
+为了避免负学习熵带来的挫败感，学生们会像你从我[前面](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Prior_knowledge_in_information_seeking)提到的泰国频道换台一样「换台"」。孩子们会忽略来自老师的"静电噪音"，并收听到其他「频道」，这些频道有更合适的学习熵水平（例如桌下的手机上的Facebook）。即使他们的理解能力很好，所传授的知识也可能无法与他们目前的知识互补。如果这些知识不能产生[高质量高价值](https://supermemo.guru/wiki/Knowledge_valuation_network)的概括，就会被认为是显而易见或毫无关联的。
 
 低学习熵，即使偶尔发生，也会让学生习惯性「换台」。一段时间后，学生们将「进化」一种过滤器，将教师当做一个零熵和零学习熵的无声广播频道。提高讲课质量将是徒劳的。老师在学生心中消失了！
 
- 在教室里，学生往往不能集中注意力在更好的信息上。老师向所有学生传授同样的信息，他们都可能同样感到无聊。相比之下，在谷歌上搜索好的关键词，[可以像拼图游戏一样，用符合当前知识树](https://supermemo.guru/wiki/Knowledge_crystallization)的低概率信息连续轰炸大脑。谷歌是一个非常便宜和高效的“哇！”生成器。
+ 在教室里，学生往往不能集中注意力在更好的信息上。老师向所有学生传授同样的信息，他们都可能同样感到无聊。相比之下，在谷歌上搜索好的关键词，[可以像拼图游戏一样，用符合当前知识树](https://supermemo.guru/wiki/Knowledge_crystallization)的低概率信息连续轰炸大脑。谷歌是一个非常便宜和高效的「哇！」生成器。
 
 在[渐进学习](https://supermemo.guru/wiki/Incremental_learning)中，学习熵检测器将选择最佳通道，对这些通道进行优先排序，并利用最佳时机最大限度地提高语义连接和记忆整合。这应该很容易理解为什么**我非常高兴，我永远不会被迫坐在学校的长椅上！**我太爱学习了！
 
